--- a/sdk/modules/subscriptions.mdx
+++ b/sdk/modules/subscriptions.mdx
@@ -1,470 +1,450 @@
 ---
-title: "Subscriptions"
-description: "Manage subscribers and lists with complete TypeScript support and automatic parameter validation"
+title: "Subscribers & Subscriptions"
+description: "List and manage subscribers, subscriptions, and subscription history"
 ---
 
-## Overview
+## Subscribers
 
-The Subscriptions module (`sdk.subscriptions`) handles subscriber relationships, list management, and subscription operations with **full type safety** and **intelligent parameter validation**.
+### List Subscribers
 
-<Card title="Subscriptions Module" icon="users">
-  **sdk.subscriptions** - Subscriber and list management with IntelliSense support
-</Card>
+Get a paginated list of subscribers with optional filtering by status, date range, and search query.
 
-## Why Use the SDK for Subscriptions?
+<CodeGroup>
+```typescript TypeScript
+import { createOFAuthClient } from '@ofauth/onlyfans-sdk';
 
-<CardGroup cols={2}>
-  <Card title="Type-Safe Filtering" icon="filter">
-    **Advanced filtering** with compile-time validation for all filter parameters and subscription states
-  </Card>
-  <Card title="Smart Validation" icon="check-circle">
-    **Context-aware validation** ensures correct parameter combinations and prevents invalid API calls
-  </Card>
-</CardGroup>
+const client = createOFAuthClient({
+  apiKey: 'your-api-key',
+  connectionId: 'conn_xxx',
+});
 
-## Get Subscribers
+const subscribers = await client.access.subscribers.list({
+  type: 'active',          // 'all' | 'active' | 'expired' | 'latest'
+  limit: 50,
+  offset: 0,
+});
 
-Retrieve subscriber list with **advanced type-safe filtering**.
-
-```typescript
-// ✅ Full type safety for all filter parameters
-const { data, error } = await sdk.subscriptions.getSubscribers({
-  authentication: { connectionId: "conn_123" },
-  params: {
-    limit: 50,                    // ✅ Number type enforced
-    offset: 0,
-    type: "active",              // ✅ Validates: "all" | "active" | "expired"
-    query: "search term",        // ✅ Optional string search
-    filter: {
-      promoId: "123",            // ✅ String validation
-      trial_id: "456",           // ✅ Consistent naming validated
-      duration: "monthly",       // ✅ Duration options validated
-      tips: "100",               // ✅ Numeric string format
-      total_spent: "500",        // ✅ Spending threshold validation
-      online: "1"                // ✅ Boolean string validation
-    }
-  }
-})
-
-// ✅ Response structure is fully typed
-if (data) {
-  console.log(`Found ${data.list.length} subscribers`)
-  data.list.forEach(subscriber => {
-    console.log(subscriber.username)    // ✅ TypeScript knows structure
-    console.log(subscriber.totalSpent)  // ✅ IntelliSense available
-  })
+for (const sub of subscribers.list) {
+  console.log(sub);
 }
 ```
 
-### Subscription Status Types
+```python Python
+from onlyfans_sdk import OFAuthClient, subscribers
 
-<AccordionGroup>
-  <Accordion title="Active Subscribers">
-    ```typescript
-    // Get currently active subscribers with type safety
-    const { data, error } = await sdk.subscriptions.getSubscribers({
-      authentication: { connectionId },
-      params: {
-        type: "active",           // ✅ TypeScript validates enum
-        filter: {
-          total_spent: "100"      // ✅ Get high-value subscribers
+client = OFAuthClient(api_key="your-api-key", connection_id="conn_xxx")
+
+subs = subscribers.list_subscribers(client, type="active", limit=50)
+for sub in subs["list"]:
+    print(sub)
+```
+
+```go Go
+subs, err := client.ListAccessSubscribers(ctx, &ofauth.RequestOptions{
+    Query: url.Values{
+        "type":  []string{"active"},
+        "limit": []string{"50"},
+    },
+})
+if err != nil {
+    log.Fatal(err)
+}
+for _, sub := range subs.List {
+    fmt.Printf("%v\n", sub)
+}
+```
+
+```csharp C#
+var subs = await client.GetAsync<SubscribersListResponse>(
+    "/v2/access/subscribers",
+    query: new Dictionary<string, string?>
+    {
+        ["type"] = "active",
+        ["limit"] = "50"
+    }
+);
+foreach (var sub in subs.List)
+{
+    Console.WriteLine(sub);
+}
+```
+</CodeGroup>
+
+**Filter options for `type`:** `all` (default), `active`, `expired`, `latest`
+
+When using `type=latest`, you can also pass `startDate`, `endDate`, and `latestType` (`total`, `new`, `renewals`):
+
+<CodeGroup>
+```typescript TypeScript
+const latestSubs = await client.access.subscribers.list({
+  type: 'latest',
+  startDate: '2024-01-01',
+  endDate: '2024-01-31',
+  latestType: 'new',
+  limit: 20,
+});
+```
+
+```python Python
+latest_subs = subscribers.list_subscribers(
+    client,
+    type="latest",
+    start_date="2024-01-01",
+    end_date="2024-01-31",
+    latest_type="new",
+    limit=20,
+)
+```
+
+```go Go
+latestSubs, err := client.ListAccessSubscribers(ctx, &ofauth.RequestOptions{
+    Query: url.Values{
+        "type":       []string{"latest"},
+        "startDate":  []string{"2024-01-01"},
+        "endDate":    []string{"2024-01-31"},
+        "latestType": []string{"new"},
+        "limit":      []string{"20"},
+    },
+})
+```
+
+```csharp C#
+var latestSubs = await client.GetAsync<SubscribersListResponse>(
+    "/v2/access/subscribers",
+    query: new Dictionary<string, string?>
+    {
+        ["type"] = "latest",
+        ["startDate"] = "2024-01-01",
+        ["endDate"] = "2024-01-31",
+        ["latestType"] = "new",
+        ["limit"] = "20"
+    }
+);
+```
+</CodeGroup>
+
+### Paginating Subscribers
+
+Each SDK provides idiomatic pagination. TypeScript uses async iterators, Python uses generators, and Go/C# use manual offset-based pagination.
+
+<CodeGroup>
+```typescript TypeScript
+// Async iterator — handles pagination automatically
+for await (const sub of client.access.subscribers.iterate({
+  type: 'active',
+  maxItems: 100,   // Stop after 100 items
+  pageSize: 20,    // Items per page
+})) {
+  console.log(sub);
+}
+```
+
+```python Python
+# Generator — handles pagination automatically
+for sub in subscribers.iter_subscribers(client, type="active", max_items=100, page_size=20):
+    print(sub)
+```
+
+```go Go
+// Manual pagination with offset
+offset := 0
+limit := 20
+
+for {
+    subs, err := client.ListAccessSubscribers(ctx, &ofauth.RequestOptions{
+        Query: url.Values{
+            "type":   []string{"active"},
+            "limit":  []string{fmt.Sprintf("%d", limit)},
+            "offset": []string{fmt.Sprintf("%d", offset)},
         },
-        limit: 20
-      }
     })
-    ```
-  </Accordion>
-  
-  <Accordion title="Expired Subscriptions">
-    ```typescript
-    // Track churned subscribers for re-engagement
-    const { data, error } = await sdk.subscriptions.getSubscribers({
-      authentication: { connectionId },
-      params: {
-        type: "expired",          // ✅ Find recent churns
-        query: "premium"          // ✅ Search in usernames/notes
-      }
-    })
-    ```
-  </Accordion>
-  
-  <Accordion title="Advanced Filtering">
-    ```typescript
-    // Complex filtering with automatic validation
-    const { data, error } = await sdk.subscriptions.getSubscribers({
-      authentication: { connectionId },
-      params: {
-        type: "active",
-        filter: {
-          duration: "monthly",    // ✅ Validates subscription type
-          tips: "50",            // ✅ Minimum tip amount
-          online: "1"            // ✅ Currently online users
-        }
-      }
-    })
-    ```
-  </Accordion>
-</AccordionGroup>
-
-<ParamField path="params.type" type="SubscriptionType" default="all">
-  **Type-validated options**: `"all"` | `"active"` | `"expired"`
-</ParamField>
-
-<ParamField path="params.filter" type="SubscriberFilter">
-  **Advanced filtering object** with context-aware validation for all properties
-</ParamField>
-
-## Subscribe to User
-
-Subscribe to another user's content with **automatic parameter validation**.
-
-```typescript
-// ✅ User ID automatically validated as number
-const { data, error } = await sdk.subscriptions.subscribeToUser({
-  authentication: { session: userData },
-  userId: 123456789 // ✅ Must be number, TypeScript prevents strings
-})
-
-if (error) {
-  // ✅ Structured error handling
-  switch (error.type) {
-    case "forbidden":
-      console.log("Cannot subscribe - user may be restricted")
-      break
-    case "bad_request":
-      console.log("Invalid user ID or already subscribed")
-      break
-  }
-}
-```
-
-## List Management
-
-### Get Lists
-
-Retrieve subscription lists with **type-safe pagination**.
-
-```typescript
-// ✅ All parameters validated at compile time
-const { data, error } = await sdk.subscriptions.getLists({
-  authentication: { connectionId: "conn_123" },
-  params: {
-    limit: 20,           // ✅ Number validation
-    offset: 0,           // ✅ Pagination offset
-    query: "VIP Members" // ✅ Optional search string
-  }
-})
-
-// ✅ Response includes typed list metadata
-if (data) {
-  data.list.forEach(list => {
-    console.log(`${list.name}: ${list.userCount} members`) // ✅ Typed properties
-  })
-}
-```
-
-### Create List
-
-Create new subscription lists with **name validation**.
-
-```typescript
-// ✅ List name automatically validated for length and format
-const { data, error } = await sdk.subscriptions.createList({
-  authentication: { session: userData },
-  params: {
-    name: "Premium Subscribers" // ✅ String validation, length limits enforced
-  }
-})
-
-if (data) {
-  console.log(`Created list: ${data.id}`) // ✅ Typed response with list ID
-}
-```
-
-### Update List
-
-Modify existing lists with **parameter validation**.
-
-```typescript
-// ✅ List ID and name both validated
-const { data, error } = await sdk.subscriptions.updateList({
-  authentication: { session: userData },
-  listId: 123,              // ✅ Number type enforced
-  params: {
-    name: "Updated Name"    // ✅ Name format validated
-  }
-})
-```
-
-### Delete List
-
-Remove lists with **ID validation**.
-
-```typescript
-// ✅ List ID must be valid number
-const { data, error } = await sdk.subscriptions.deleteList({
-  authentication: { session: userData },
-  listId: 123 // ✅ TypeScript prevents string IDs
-})
-```
-
-## List User Management
-
-### Get List Users
-
-Retrieve users from specific lists with **system list support**.
-
-```typescript
-// ✅ Supports both numeric IDs and system list names
-const { data, error } = await sdk.subscriptions.getListUsers({
-  authentication: { connectionId: "conn_123" },
-  listId: 123,             // ✅ Or use "fans", "following" - typed unions
-  params: {
-    limit: 50,             // ✅ Pagination validated
-    offset: 0
-  }
-})
-
-// System lists with type safety
-const { data: fansData } = await sdk.subscriptions.getListUsers({
-  authentication: { connectionId },
-  listId: "fans",          // ✅ TypeScript validates system list names
-  params: { limit: 100 }
-})
-```
-
-### Add Users to Lists
-
-Bulk user operations with **array validation**.
-
-```typescript
-// ✅ User ID array automatically validated (all numbers)
-const { data, error } = await sdk.subscriptions.addUsersToList({
-  authentication: { session: userData },
-  listId: 123,                     // ✅ List ID validated
-  userIds: [456, 789, 101112]      // ✅ Array of numbers enforced
-})
-
-// Single user addition with validation
-const { data: singleResult } = await sdk.subscriptions.addUserToList({
-  authentication: { session: userData },
-  listId: 123,           // ✅ Number validation
-  userId: 456            // ✅ Single number validation
-})
-```
-
-### Remove Users from Lists
-
-Remove users with **ID validation**.
-
-```typescript
-// ✅ Both list and user IDs validated
-const { data, error } = await sdk.subscriptions.removeUserFromList({
-  authentication: { session: userData },
-  listId: 123,    // ✅ List ID must be number
-  userId: 456     // ✅ User ID must be number
-})
-```
-
-## List Organization
-
-### Sort Lists
-
-Reorder lists with **array validation**.
-
-```typescript
-// ✅ Array of list IDs validates all elements are numbers
-const { data, error } = await sdk.subscriptions.sortLists({
-  authentication: { session: userData },
-  params: {
-    listIds: [123, 456, 789] // ✅ Order defines sort, all IDs validated
-  }
-})
-```
-
-### Search Lists
-
-Find lists by name with **query validation**.
-
-```typescript
-// ✅ Search query validated for format and length
-const { data, error } = await sdk.subscriptions.searchLists({
-  authentication: { connectionId: "conn_123" },
-  query: "VIP" // ✅ String validation, minimum length enforced
-})
-```
-
-### Get Pinned Users
-
-Retrieve pinned users with **list validation**.
-
-```typescript
-// ✅ List ID automatically validated
-const { data, error } = await sdk.subscriptions.getListPinnedUsers({
-  authentication: { connectionId: "conn_123" },
-  listId: 123 // ✅ Must be valid number
-})
-```
-
-## Advanced Subscription Management
-
-### Type-Safe Subscriber Analysis
-
-```typescript
-// ✅ Complete type safety for subscriber analytics
-async function analyzeSubscribers(connectionId: string) {
-  const [active, expired, highValue] = await Promise.all([
-    sdk.subscriptions.getSubscribers({
-      authentication: { connectionId },
-      params: { 
-        type: "active",           // ✅ Validated enum
-        limit: 100 
-      }
-    }),
-    sdk.subscriptions.getSubscribers({
-      authentication: { connectionId },
-      params: { 
-        type: "expired",          // ✅ Validated enum
-        limit: 50 
-      }
-    }),
-    sdk.subscriptions.getSubscribers({
-      authentication: { connectionId },
-      params: {
-        type: "active",
-        filter: { 
-          total_spent: "500"      // ✅ High-value threshold validated
-        }
-      }
-    })
-  ])
-  
-  // ✅ All responses are fully typed
-  return {
-    activeCount: active.data?.list.length || 0,
-    churnedCount: expired.data?.list.length || 0,
-    highValueCount: highValue.data?.list.length || 0,
-    retentionRate: active.data && expired.data 
-      ? active.data.list.length / (active.data.list.length + expired.data.list.length)
-      : 0
-  }
-}
-```
-
-### List Management with Validation
-
-```typescript
-// ✅ Comprehensive list operations with type safety
-class SubscriberListManager {
-  
-  async createSegmentedLists(connectionId: string) {
-    // ✅ All operations validated at compile time
-    const lists = await Promise.all([
-      sdk.subscriptions.createList({
-        authentication: { connectionId },
-        params: { name: "High Spenders" }      // ✅ Name validated
-      }),
-      sdk.subscriptions.createList({
-        authentication: { connectionId },
-        params: { name: "New Subscribers" }    // ✅ Name validated
-      }),
-      sdk.subscriptions.createList({
-        authentication: { connectionId },
-        params: { name: "Re-engagement" }      // ✅ Name validated
-      })
-    ])
-    
-    return lists.map(list => ({
-      id: list.data?.id,
-      success: !list.error
-    }))
-  }
-  
-  async populateLists(connectionId: string) {
-    // ✅ Complex filtering with automatic validation
-    const highSpenders = await sdk.subscriptions.getSubscribers({
-      authentication: { connectionId },
-      params: {
-        type: "active",
-        filter: { total_spent: "200" }        // ✅ Spending threshold validated
-      }
-    })
-    
-    const newSubs = await sdk.subscriptions.getSubscribers({
-      authentication: { connectionId },
-      params: {
-        type: "active",
-        filter: { duration: "monthly" }       // ✅ Duration filter validated
-      }
-    })
-    
-    // ✅ Bulk operations with array validation
-    if (highSpenders.data && newSubs.data) {
-      await Promise.all([
-        sdk.subscriptions.addUsersToList({
-          authentication: { connectionId },
-          listId: 1,
-          userIds: highSpenders.data.list.map(s => s.id) // ✅ Array validated
-        }),
-        sdk.subscriptions.addUsersToList({
-          authentication: { connectionId },
-          listId: 2,
-          userIds: newSubs.data.list.map(s => s.id)      // ✅ Array validated
-        })
-      ])
+    if err != nil {
+        log.Fatal(err)
     }
-  }
+
+    for _, sub := range subs.List {
+        fmt.Printf("%v\n", sub)
+    }
+
+    if !subs.HasMore {
+        break
+    }
+    offset += len(subs.List)
 }
 ```
 
-## Error Handling
+```csharp C#
+// Manual pagination with offset
+int offset = 0;
+int limit = 20;
 
-Subscription operations benefit from **comprehensive error typing**:
+while (true)
+{
+    var subs = await client.GetAsync<SubscribersListResponse>(
+        "/v2/access/subscribers",
+        query: new Dictionary<string, string?>
+        {
+            ["type"] = "active",
+            ["limit"] = limit.ToString(),
+            ["offset"] = offset.ToString()
+        }
+    );
 
-```typescript
-const result = await sdk.subscriptions.getSubscribers(params)
+    foreach (var sub in subs.List)
+    {
+        Console.WriteLine(sub);
+    }
 
-if (result.error) {
-  // ✅ Error types are fully defined and context-aware
-  switch (result.error.type) {
-    case "unauthorized":
-      console.log("Session expired")
-      break
-    case "forbidden":
-      console.log("Access denied to subscriber data")
-      break
-    case "bad_request":
-      // ✅ TypeScript knows error.details exists for validation errors
-      console.log("Invalid filter parameters:", result.error.details)
-      break
-    case "too_many_requests":
-      console.log("Rate limited - subscriber queries are throttled")
-      break
-  }
+    if (!subs.HasMore) break;
+    offset += subs.List.Count;
+}
+```
+</CodeGroup>
+
+### Subscriber Actions
+
+Update notes, apply discounts, and set custom names for individual subscribers.
+
+<CodeGroup>
+```typescript TypeScript
+// Update subscriber note
+await client.access.subscribers.setNote({
+  userId: '12345',
+  body: { text: 'VIP subscriber' },
+});
+
+// Apply discount to subscriber
+await client.access.subscribers.setDiscount({
+  userId: '12345',
+  body: { discount: 50, months: 3 },
+});
+
+// Set custom display name
+await client.access.subscribers.setCustomName({
+  userId: '12345',
+  body: { name: 'My Custom Name' },
+});
+```
+
+```python Python
+# Update subscriber note
+subscribers.set_note(client, user_id="12345", body={"text": "VIP subscriber"})
+
+# Apply discount to subscriber
+subscribers.set_discount(client, user_id="12345", body={"discount": 50, "months": 3})
+
+# Set custom display name
+subscribers.set_custom_name(client, user_id="12345", body={"name": "My Custom Name"})
+```
+
+```go Go
+// Update subscriber note
+_, err := client.SetAccessSubscribersNote(ctx, "12345", struct {
+    Text string `json:"text"`
+}{Text: "VIP subscriber"})
+
+// Apply discount to subscriber
+_, err = client.SetAccessSubscribersDiscount(ctx, "12345", struct {
+    Discount int `json:"discount"`
+    Months   int `json:"months"`
+}{Discount: 50, Months: 3})
+```
+
+```csharp C#
+// Update subscriber note
+await client.PutAsync<object>(
+    "/v2/access/subscribers/12345/note",
+    body: new { text = "VIP subscriber" }
+);
+
+// Apply discount to subscriber
+await client.PutAsync<object>(
+    "/v2/access/subscribers/12345/discount",
+    body: new { discount = 50, months = 3 }
+);
+
+// Set custom display name
+await client.PutAsync<object>(
+    "/v2/access/subscribers/12345/custom-name",
+    body: new { name = "My Custom Name" }
+);
+```
+</CodeGroup>
+
+---
+
+## Subscriptions
+
+Subscriptions represent people *you* are subscribed to or following (the inverse of subscribers).
+
+### List Subscriptions
+
+<CodeGroup>
+```typescript TypeScript
+const subscriptions = await client.access.subscriptions.list({
+  type: 'active',          // 'all' | 'active' | 'expired'
+  limit: 20,
+  offset: 0,
+});
+
+for (const sub of subscriptions.list) {
+  console.log(sub);
+}
+
+// Auto-paginate through all subscriptions
+for await (const sub of client.access.subscriptions.iterate({
+  type: 'active',
+})) {
+  console.log(sub);
 }
 ```
 
-## Best Practices
+```python Python
+from onlyfans_sdk import subscriptions
 
-<CardGroup cols={2}>
-  <Card title="Type-Safe Filtering" icon="filter">
-    **Leverage IntelliSense**
-    
-    - Use IDE autocomplete for filter parameters
-    - Trust TypeScript for parameter validation
-    - Let the SDK handle enum validation
-    - Combine filters for precise targeting
-  </Card>
-  <Card title="Efficient List Management" icon="list">
-    **Organize Subscribers**
-    
-    - Create targeted lists for campaigns
-    - Use bulk operations for efficiency
-    - Leverage system lists ("fans", "following")
-    - Implement pagination for large lists
-  </Card>
-</CardGroup>
+subs = subscriptions.list_subscriptions(client, type="active", limit=20)
+for sub in subs["list"]:
+    print(sub)
 
-<Warning>
-  **Rate Limiting**: Subscriber queries are rate-limited. Use the SDK's built-in retry logic and implement appropriate delays between bulk operations.
-</Warning> 
+# Auto-paginate through all subscriptions
+for sub in subscriptions.iter_subscriptions(client, type="active"):
+    print(sub)
+```
+
+```go Go
+subs, err := client.ListAccessSubscriptions(ctx, &ofauth.RequestOptions{
+    Query: url.Values{
+        "type":  []string{"active"},
+        "limit": []string{"20"},
+    },
+})
+for _, sub := range subs.List {
+    fmt.Printf("%v\n", sub)
+}
+```
+
+```csharp C#
+var subs = await client.GetAsync<SubscriptionsListResponse>(
+    "/v2/access/subscriptions",
+    query: new Dictionary<string, string?>
+    {
+        ["type"] = "active",
+        ["limit"] = "20"
+    }
+);
+foreach (var sub in subs.List)
+{
+    Console.WriteLine(sub);
+}
+```
+</CodeGroup>
+
+### Subscription Counts
+
+Get aggregated counts of subscriptions and subscribers by status.
+
+<CodeGroup>
+```typescript TypeScript
+const counts = await client.access.subscriptions.getCount();
+console.log('Subscriptions:', counts.subscriptions);
+console.log('Subscribers:', counts.subscribers);
+```
+
+```python Python
+counts = subscriptions.list_counts(client)
+print("Subscriptions:", counts["subscriptions"])
+print("Subscribers:", counts["subscribers"])
+```
+
+```go Go
+counts, err := client.GetAccessSubscriptionsCount(ctx)
+if err != nil {
+    log.Fatal(err)
+}
+fmt.Printf("Subscriptions: %+v\n", counts.Subscriptions)
+fmt.Printf("Subscribers: %+v\n", counts.Subscribers)
+```
+
+```csharp C#
+var counts = await client.GetAsync<SubscriptionsCountResponse>(
+    "/v2/access/subscriptions/count"
+);
+Console.WriteLine($"Subscriptions: {counts.Subscriptions}");
+Console.WriteLine($"Subscribers: {counts.Subscribers}");
+```
+</CodeGroup>
+
+### Get Subscription by ID
+
+<CodeGroup>
+```typescript TypeScript
+const subscription = await client.access.subscriptions.get({
+  subscriptionId: 'sub_123',
+});
+```
+
+```python Python
+subscription = subscriptions.get_subscriptions(client, subscription_id="sub_123")
+```
+
+```go Go
+subscription, err := client.GetAccessSubscriptions(ctx, "sub_123")
+```
+
+```csharp C#
+var subscription = await client.GetAsync<SubscriptionResponse>(
+    "/v2/access/subscriptions/sub_123"
+);
+```
+</CodeGroup>
+
+### Subscription History
+
+View the renewal and change history for a specific subscription.
+
+<CodeGroup>
+```typescript TypeScript
+const history = await client.access.subscriptions.getHistory({
+  subscriptionId: 'sub_123',
+  all: '1',                // '0' | '1' | 'true' | 'false' — include all history
+});
+```
+
+```python Python
+history = subscriptions.list_historys(
+    client,
+    subscription_id="sub_123",
+    all="1",
+)
+```
+
+```go Go
+history, err := client.GetAccessSubscriptionsHistory(ctx, "sub_123", &ofauth.RequestOptions{
+    Query: url.Values{
+        "all": []string{"1"},
+    },
+})
+```
+
+```csharp C#
+var history = await client.GetAsync<SubscriptionHistoryResponse>(
+    "/v2/access/subscriptions/sub_123/history",
+    query: new Dictionary<string, string?> { ["all"] = "1" }
+);
+```
+</CodeGroup>
+
+## Pagination Patterns
+
+Each SDK handles pagination differently to match language idioms:
+
+| Language | Pattern | Example |
+|---|---|---|
+| **TypeScript** | Async iterators (`for await...of`) | `client.access.subscribers.iterate({ maxItems: 100 })` |
+| **Python** | Generators (`for...in`) | `subscribers.iter_subscribers(client, max_items=100)` |
+| **Go** | Manual offset loop | Check `response.HasMore`, increment `offset` |
+| **C#** | Manual offset loop | Check `response.HasMore`, increment `offset` |
+
+<Tip>
+  TypeScript and Python iterators handle pagination automatically — you just iterate and the SDK fetches pages behind the scenes. For Go and C#, use the `HasMore` flag and `offset` query parameter to manually page through results.
+</Tip>
