--- a/sdk/advanced/error-handling.mdx
+++ b/sdk/advanced/error-handling.mdx
@@ -1,471 +1,553 @@
 ---
 title: "Error Handling"
-description: "Comprehensive error handling strategies and patterns for the OnlyFans SDK"
+description: "Catch and handle API errors across all OFAuth SDKs using exception-based patterns"
 ---
 
 ## Overview
 
-The OnlyFans SDK uses a consistent **Result pattern** for error handling, eliminating exceptions and making error handling predictable across all methods.
+All OFAuth SDKs throw exceptions when API requests fail. Each language has a dedicated error class with structured properties for status codes, error codes, messages, and details.
 
 <CardGroup cols={2}>
-  <Card title="Result Pattern" icon="check-circle">
-    All methods return `{ data, error }` - never both, never exceptions
+  <Card title="Exception-Based" icon="shield-check">
+    All SDKs throw typed exceptions — use try/catch (or equivalent) to handle errors
   </Card>
   <Card title="Structured Errors" icon="info-circle">
-    Rich error information with type, message, retry info, and details
+    Every exception includes status code, error code, message, and optional details
   </Card>
 </CardGroup>
 
-## Response Format
+## Error Classes
 
-Every SDK method returns this consistent format:
+Each SDK provides a typed error class with consistent properties:
 
-```typescript
-// Success case
-{
-  data: T,           // Your actual data
-  error: undefined   // No error
-}
+<CodeGroup>
+  ```typescript TypeScript
+  import { OFAuthAPIError } from '@ofauth/onlyfans-sdk';
 
-// Error case
-{
-  data: undefined,   // No data
-  error: {
-    type: "error_type",
-    statusCode: 400,
-    message: "Human readable error message", 
-    retry: false,    // Whether this error is retryable
-    details?: any    // Additional error context (optional)
-  }
-}
-```
+  // OFAuthAPIError extends Error
+  // Properties:
+  //   status: number       — HTTP status code (e.g. 401, 404, 429)
+  //   message: string      — Human-readable error description
+  //   code: string         — Machine-readable error code (e.g. "UNAUTHORIZED")
+  //   details: object      — Additional context (optional)
+  //   response: Response   — Raw fetch Response object
+  ```
 
-<Info>
-  **No Exceptions**: The SDK never throws exceptions for API errors. All errors are returned in the `error` property, making error handling predictable.
-</Info>
+  ```python Python
+  from onlyfans_sdk import OFAuthError
 
-## Error Types
+  # OFAuthError
+  # Properties:
+  #   status: int          — HTTP status code (e.g. 401, 404, 429)
+  #   message: str         — Human-readable error description
+  #   code: str            — Machine-readable error code (e.g. "UNAUTHORIZED")
+  #   details: dict        — Additional context (optional)
+  ```
 
-The SDK categorizes errors into distinct types for appropriate handling:
+  ```go Go
+  import "github.com/ofauth-org/onlyfans-sdk-go"
 
-### Authentication Errors (401)
-```typescript
-const { data, error } = await sdk.self.getMe({
-  authentication: { session: expiredSession }
-})
+  // *ofauth.APIError
+  // Fields:
+  //   Status:  int           — HTTP status code (e.g. 401, 404, 429)
+  //   Message: string        — Human-readable error description
+  //   Code:    string        — Machine-readable error code (e.g. "UNAUTHORIZED")
+  //   Details: interface{}   — Additional context (optional)
+  ```
 
-if (error?.type === "unauthorized") {
-  console.log("Session expired, redirecting to login...")
-  await redirectToLogin()
-}
-```
+  ```csharp C#
+  using OFAuth;
 
-**Common causes:** Expired sessions, invalid connection IDs, missing authentication
-
-### Permission Errors (403)
-```typescript
-const { data, error } = await sdk.posts.deletePost({
-  authentication: { session },
-  postId: 12345
-})
-
-if (error?.type === "forbidden") {
-  console.log("You don't have permission to delete this post")
-}
-```
-
-**Common causes:** Insufficient permissions, accessing private content, account restrictions
-
-### Rate Limiting (429)
-```typescript
-const { data, error } = await sdk.messages.sendChatMessage(params)
-
-if (error?.type === "too_many_requests") {
-  console.log("Rate limited, implementing backoff...")
-  await new Promise(resolve => setTimeout(resolve, 5000))
-  // Retry the request
-}
-```
-
-**Handling strategy:** Implement exponential backoff, respect retry intervals, queue requests
-
-### Validation Errors (400)
-```typescript
-const { data, error } = await sdk.posts.createPost({
-  authentication: { session },
-  params: { text: "", mediaItems: [] } // Invalid - empty
-})
-
-if (error?.type === "bad_request") {
-  console.log("Validation error:", error.message)
-  if (error.details) {
-    console.log("Field errors:", error.details)
-  }
-}
-```
-
-**Common causes:** Missing required fields, invalid values, malformed data
+  // OFAuthException extends Exception
+  // Properties:
+  //   Status: int            — HTTP status code (e.g. 401, 404, 429)
+  //   Message: string        — Human-readable error description
+  //   Code: string           — Machine-readable error code (e.g. "UNAUTHORIZED")
+  //   Details: object        — Additional context (optional)
+  ```
+</CodeGroup>
 
 ## Basic Error Handling
 
-### Simple Error Checking
-```typescript
-async function sendMessage(userId: number, text: string) {
-  const { data, error } = await sdk.messages.sendChatMessage({
-    authentication: { session: userSession },
-    userId,
-    params: { text }
-  })
-  
-  if (error) {
-    console.error(`Failed to send message: ${error.message}`)
-    return null
-  }
-  
-  return data
-}
-```
+Wrap API calls in try/catch to handle errors:
 
-### Error Type Switching
-```typescript
-async function handleApiCall() {
-  const { data, error } = await sdk.self.getMe({
-    authentication: { session: userSession }
-  })
-  
-  if (error) {
-    switch (error.type) {
-      case "unauthorized":
-        await redirectToLogin()
-        break
-      case "forbidden":
-        showErrorMessage("Access denied")
-        break
-      case "too_many_requests":
-        await implementBackoff()
-        break
-      case "not_found":
-        showErrorMessage("Resource not found")
-        break
-      default:
-        showErrorMessage("An unexpected error occurred")
+<CodeGroup>
+  ```typescript TypeScript
+  import { createOFAuthClient, OFAuthAPIError } from '@ofauth/onlyfans-sdk';
+
+  const client = createOFAuthClient({ apiKey: 'your-api-key' });
+
+  try {
+    const account = await client.account.whoami();
+    console.log('Account ID:', account.id);
+  } catch (error) {
+    if (error instanceof OFAuthAPIError) {
+      console.error('API Error:', error.status, error.message);
+      console.error('Error code:', error.code);
+      console.error('Details:', error.details);
+    } else {
+      // Network error or other unexpected error
+      throw error;
     }
-    return null
   }
-  
-  return data
-}
-```
+  ```
 
-## Advanced Error Handling
+  ```python Python
+  from onlyfans_sdk import OFAuthClient, OFAuthError, account
 
-### Retry Logic with Exponential Backoff
-```typescript
-async function apiCallWithRetry<T>(
-  apiCall: () => Promise<{ data?: T; error?: any }>,
-  maxRetries: number = 3
-): Promise<{ data?: T; error?: any }> {
-  
-  for (let attempt = 1; attempt <= maxRetries; attempt++) {
-    const result = await apiCall()
-    
-    if (!result.error) {
-      return result // Success
-    }
-    
-    // Don't retry non-retryable errors
-    if (!result.error.retry || attempt === maxRetries) {
-      return result
-    }
-    
-    // Exponential backoff for retryable errors
-    const delay = Math.min(1000 * Math.pow(2, attempt - 1), 30000)
-    console.log(`Retrying in ${delay}ms (attempt ${attempt}/${maxRetries})`)
-    
-    await new Promise(resolve => setTimeout(resolve, delay))
-  }
-  
-  return { error: { type: "retry_exhausted", message: "Max retries exceeded" } }
-}
+  client = OFAuthClient(api_key="your-api-key")
 
-// Usage
-const result = await apiCallWithRetry(() => 
-  sdk.messages.sendChatMessage(params)
-)
-```
+  try:
+      result = account.whoami(client)
+      print("Account ID:", result["id"])
+  except OFAuthError as e:
+      print(f"API Error {e.status}: {e.message}")
+      print(f"Error code: {e.code}")
+      print(f"Details: {e.details}")
+  except Exception as e:
+      # Network error or other unexpected error
+      raise
+  ```
 
-### Error Recovery Patterns
-```typescript
-class SDKErrorHandler {
-  private retryableErrors = ["too_many_requests", "internal_server_error", "bad_gateway"]
-  
-  async handleWithRecovery<T>(
-    operation: () => Promise<{ data?: T; error?: any }>,
-    fallback?: () => Promise<T>
-  ): Promise<T | null> {
-    
-    try {
-      const { data, error } = await operation()
-      
-      if (!error) {
-        return data
+  ```go Go
+  package main
+
+  import (
+      "context"
+      "fmt"
+      "log"
+
+      "github.com/ofauth-org/onlyfans-sdk-go"
+  )
+
+  func main() {
+      client := ofauth.NewClient("your-api-key")
+      ctx := context.Background()
+
+      account, err := client.Whoami(ctx)
+      if err != nil {
+          if apiErr, ok := err.(*ofauth.APIError); ok {
+              fmt.Printf("API Error %d: %s\n", apiErr.Status, apiErr.Message)
+              fmt.Printf("Error code: %s\n", apiErr.Code)
+              fmt.Printf("Details: %v\n", apiErr.Details)
+          } else {
+              // Network error or other unexpected error
+              log.Fatal(err)
+          }
+          return
       }
-      
-      // Handle specific error types
-      switch (error.type) {
-        case "unauthorized":
-          await this.refreshAuthentication()
-          // Retry once after auth refresh
-          const retryResult = await operation()
-          return retryResult.data || null
-          
-        case "too_many_requests":
-          await this.handleRateLimit(error)
-          return null
-          
-        case "not_found":
-          console.warn("Resource not found, using fallback")
-          return fallback ? await fallback() : null
-          
+
+      fmt.Printf("Account ID: %s\n", account.Id)
+  }
+  ```
+
+  ```csharp C#
+  using OFAuth;
+
+  var client = new OFAuthClient("your-api-key");
+
+  try
+  {
+      var account = await client.GetAsync<WhoamiResponse>("/v2/account/whoami");
+      Console.WriteLine($"Account ID: {account.Id}");
+  }
+  catch (OFAuthException ex)
+  {
+      Console.WriteLine($"API Error {ex.Status}: {ex.Message}");
+      Console.WriteLine($"Error code: {ex.Code}");
+      Console.WriteLine($"Details: {ex.Details}");
+  }
+  catch (HttpRequestException ex)
+  {
+      // Network error or other unexpected error
+      throw;
+  }
+  ```
+</CodeGroup>
+
+## Common Error Codes
+
+The API returns standard HTTP status codes with structured error bodies:
+
+| Status | Name | Description | Retryable |
+|--------|------|-------------|-----------|
+| `400` | Bad Request | Invalid parameters or malformed request body | No |
+| `401` | Unauthorized | Invalid or missing API key, or expired session | No |
+| `403` | Forbidden | Insufficient permissions for this operation | No |
+| `404` | Not Found | Resource or endpoint does not exist | No |
+| `429` | Too Many Requests | Rate limit exceeded — back off and retry | Yes |
+| `500` | Internal Server Error | Unexpected server error — retry with backoff | Yes |
+| `502` | Bad Gateway | Upstream service error — retry after delay | Yes |
+| `503` | Service Unavailable | Temporary outage — retry after delay | Yes |
+
+<Info>
+  Errors also include a `code` string (e.g. `"UNAUTHORIZED"`, `"SESSION_EXPIRED"`, `"RATE_LIMIT_EXCEEDED"`) for more precise programmatic handling. See the [Error Reference](/reference/error-handling) for the full list of error codes.
+</Info>
+
+## Handling Specific Errors
+
+Match on the status code or error code to handle different failure scenarios:
+
+<CodeGroup>
+  ```typescript TypeScript
+  import { OFAuthAPIError } from '@ofauth/onlyfans-sdk';
+
+  try {
+    const profile = await client.access.self.get();
+  } catch (error) {
+    if (error instanceof OFAuthAPIError) {
+      switch (error.status) {
+        case 401:
+          // Session expired or invalid API key
+          console.log('Authentication failed — re-authenticate the user');
+          break;
+        case 403:
+          console.log('Insufficient permissions for this connection');
+          break;
+        case 404:
+          console.log('Resource not found');
+          break;
+        case 429:
+          console.log('Rate limited — slow down requests');
+          break;
         default:
-          console.error("API error:", error.message)
-          return null
+          if (error.status >= 500) {
+            console.log('Server error — retry later');
+          }
       }
-      
-    } catch (error) {
-      console.error("Unexpected error:", error)
-      return null
+    } else {
+      throw error;
     }
   }
-  
-  private async refreshAuthentication() {
-    // Implementation for refreshing auth
-    console.log("Refreshing authentication...")
-  }
-  
-  private async handleRateLimit(error: any) {
-    const delay = error.retryAfter || 5000
-    console.log(`Rate limited, waiting ${delay}ms`)
-    await new Promise(resolve => setTimeout(resolve, delay))
-  }
-}
+  ```
 
-// Usage
-const errorHandler = new SDKErrorHandler()
+  ```python Python
+  from onlyfans_sdk import OFAuthError
 
-const result = await errorHandler.handleWithRecovery(
-  () => sdk.user.getById({ authentication: { session }, userId: 123 }),
-  () => ({ id: 123, username: "unknown" }) // Fallback
-)
-```
+  try:
+      profile = self_module.list_selfs(client)
+  except OFAuthError as e:
+      if e.status == 401:
+          # Session expired or invalid API key
+          print("Authentication failed — re-authenticate the user")
+      elif e.status == 403:
+          print("Insufficient permissions for this connection")
+      elif e.status == 404:
+          print("Resource not found")
+      elif e.status == 429:
+          print("Rate limited — slow down requests")
+      elif e.status >= 500:
+          print("Server error — retry later")
+  ```
 
-### Circuit Breaker Pattern
-```typescript
-class CircuitBreaker {
-  private failures = 0
-  private lastFailureTime = 0
-  private state: "closed" | "open" | "half-open" = "closed"
-  
-  constructor(
-    private threshold = 5,
-    private timeout = 30000
-  ) {}
-  
-  async execute<T>(operation: () => Promise<{ data?: T; error?: any }>): Promise<{ data?: T; error?: any }> {
-    if (this.state === "open") {
-      if (Date.now() - this.lastFailureTime < this.timeout) {
-        return { error: { type: "circuit_open", message: "Circuit breaker is open" } }
+  ```go Go
+  account, err := client.Whoami(ctx)
+  if err != nil {
+      if apiErr, ok := err.(*ofauth.APIError); ok {
+          switch apiErr.Status {
+          case 401:
+              // Session expired or invalid API key
+              fmt.Println("Authentication failed — re-authenticate the user")
+          case 403:
+              fmt.Println("Insufficient permissions for this connection")
+          case 404:
+              fmt.Println("Resource not found")
+          case 429:
+              fmt.Println("Rate limited — slow down requests")
+          default:
+              if apiErr.Status >= 500 {
+                  fmt.Println("Server error — retry later")
+              }
+          }
+      } else {
+          log.Fatal(err)
       }
-      this.state = "half-open"
-    }
-    
-    try {
-      const result = await operation()
-      
-      if (result.error) {
-        this.onFailure()
-        return result
+  }
+  ```
+
+  ```csharp C#
+  try
+  {
+      var profile = await client.GetAsync<SelfResponse>("/v2/access/self");
+  }
+  catch (OFAuthException ex)
+  {
+      switch (ex.Status)
+      {
+          case 401:
+              // Session expired or invalid API key
+              Console.WriteLine("Authentication failed — re-authenticate the user");
+              break;
+          case 403:
+              Console.WriteLine("Insufficient permissions for this connection");
+              break;
+          case 404:
+              Console.WriteLine("Resource not found");
+              break;
+          case 429:
+              Console.WriteLine("Rate limited — slow down requests");
+              break;
+          default:
+              if (ex.Status >= 500)
+                  Console.WriteLine("Server error — retry later");
+              break;
       }
-      
-      this.onSuccess()
-      return result
-      
-    } catch (error) {
-      this.onFailure()
-      return { error: { type: "circuit_error", message: "Circuit breaker caught error" } }
+  }
+  ```
+</CodeGroup>
+
+## Retry with Exponential Backoff
+
+For transient errors (429, 500, 502, 503), retry with increasing delays:
+
+<CodeGroup>
+  ```typescript TypeScript
+  import { OFAuthAPIError } from '@ofauth/onlyfans-sdk';
+
+  async function withRetry<T>(
+    fn: () => Promise<T>,
+    maxRetries = 3
+  ): Promise<T> {
+    for (let attempt = 0; attempt <= maxRetries; attempt++) {
+      try {
+        return await fn();
+      } catch (error) {
+        if (!(error instanceof OFAuthAPIError)) throw error;
+
+        const retryable = [429, 500, 502, 503].includes(error.status);
+        if (!retryable || attempt === maxRetries) throw error;
+
+        const delay = Math.min(1000 * Math.pow(2, attempt), 30000);
+        console.log(`Retrying in ${delay}ms (attempt ${attempt + 1}/${maxRetries})`);
+        await new Promise(resolve => setTimeout(resolve, delay));
+      }
+    }
+    throw new Error('Unreachable');
+  }
+
+  // Usage
+  const account = await withRetry(() => client.account.whoami());
+  ```
+
+  ```python Python
+  import time
+  from onlyfans_sdk import OFAuthError
+
+  def with_retry(fn, max_retries=3):
+      for attempt in range(max_retries + 1):
+          try:
+              return fn()
+          except OFAuthError as e:
+              retryable = e.status in (429, 500, 502, 503)
+              if not retryable or attempt == max_retries:
+                  raise
+
+              delay = min(2 ** attempt, 30)
+              print(f"Retrying in {delay}s (attempt {attempt + 1}/{max_retries})")
+              time.sleep(delay)
+
+  # Usage
+  result = with_retry(lambda: account.whoami(client))
+  ```
+
+  ```go Go
+  import (
+      "fmt"
+      "math"
+      "time"
+
+      "github.com/ofauth-org/onlyfans-sdk-go"
+  )
+
+  func withRetry[T any](fn func() (T, error), maxRetries int) (T, error) {
+      var zero T
+      for attempt := 0; attempt <= maxRetries; attempt++ {
+          result, err := fn()
+          if err == nil {
+              return result, nil
+          }
+
+          apiErr, ok := err.(*ofauth.APIError)
+          if !ok {
+              return zero, err
+          }
+
+          retryable := apiErr.Status == 429 || apiErr.Status >= 500
+          if !retryable || attempt == maxRetries {
+              return zero, err
+          }
+
+          delay := time.Duration(math.Min(
+              float64(time.Second)*math.Pow(2, float64(attempt)),
+              float64(30*time.Second),
+          ))
+          fmt.Printf("Retrying in %v (attempt %d/%d)\n", delay, attempt+1, maxRetries)
+          time.Sleep(delay)
+      }
+      return zero, fmt.Errorf("unreachable")
+  }
+
+  // Usage
+  account, err := withRetry(func() (*ofauth.WhoamiResponse, error) {
+      return client.Whoami(ctx)
+  }, 3)
+  ```
+
+  ```csharp C#
+  using OFAuth;
+
+  async Task<T> WithRetryAsync<T>(
+      Func<Task<T>> fn,
+      int maxRetries = 3)
+  {
+      for (int attempt = 0; attempt <= maxRetries; attempt++)
+      {
+          try
+          {
+              return await fn();
+          }
+          catch (OFAuthException ex)
+          {
+              bool retryable = ex.Status is 429 or 500 or 502 or 503;
+              if (!retryable || attempt == maxRetries) throw;
+
+              var delay = TimeSpan.FromSeconds(Math.Min(Math.Pow(2, attempt), 30));
+              Console.WriteLine($"Retrying in {delay.TotalSeconds}s (attempt {attempt + 1}/{maxRetries})");
+              await Task.Delay(delay);
+          }
+      }
+      throw new InvalidOperationException("Unreachable");
+  }
+
+  // Usage
+  var account = await WithRetryAsync(
+      () => client.GetAsync<WhoamiResponse>("/v2/account/whoami")
+  );
+  ```
+</CodeGroup>
+
+## Network Errors
+
+API errors (bad status codes) and network errors (timeouts, DNS failures, connection refused) are different. The SDK error classes only represent API responses — network failures throw the language's native error types.
+
+<CodeGroup>
+  ```typescript TypeScript
+  import { OFAuthAPIError } from '@ofauth/onlyfans-sdk';
+
+  try {
+    const account = await client.account.whoami();
+  } catch (error) {
+    if (error instanceof OFAuthAPIError) {
+      // API returned an error response (4xx, 5xx)
+      console.error(`API error ${error.status}: ${error.message}`);
+    } else if (error instanceof TypeError) {
+      // Network failure (fetch throws TypeError for network errors)
+      console.error('Network error — check your connection');
+    } else {
+      // Something else entirely
+      console.error('Unexpected error:', error);
     }
   }
-  
-  private onSuccess() {
-    this.failures = 0
-    this.state = "closed"
-  }
-  
-  private onFailure() {
-    this.failures++
-    this.lastFailureTime = Date.now()
-    
-    if (this.failures >= this.threshold) {
-      this.state = "open"
-    }
-  }
-}
-```
+  ```
 
-## Error Logging and Monitoring
+  ```python Python
+  import httpx
+  from onlyfans_sdk import OFAuthError
 
-### Structured Error Logging
-```typescript
-class ErrorLogger {
-  static log(error: any, context: any = {}) {
-    const logEntry = {
-      timestamp: new Date().toISOString(),
-      type: error.type,
-      statusCode: error.statusCode,
-      message: error.message,
-      retry: error.retry,
-      context,
-      details: error.details
-    }
-    
-    // Send to your logging service
-    console.error("SDK Error:", JSON.stringify(logEntry, null, 2))
-    
-    // Send to monitoring (e.g., Sentry, DataDog)
-    if (this.shouldAlert(error)) {
-      this.sendAlert(logEntry)
-    }
-  }
-  
-  private static shouldAlert(error: any): boolean {
-    const alertableTypes = ["internal_server_error", "bad_gateway", "service_unavailable"]
-    return alertableTypes.includes(error.type)
-  }
-  
-  private static sendAlert(logEntry: any) {
-    // Implementation for sending alerts
-    console.log("Sending alert for error:", logEntry.type)
-  }
-}
+  try:
+      result = account.whoami(client)
+  except OFAuthError as e:
+      # API returned an error response (4xx, 5xx)
+      print(f"API error {e.status}: {e.message}")
+  except httpx.TimeoutException:
+      # Request timed out
+      print("Request timed out — try again")
+  except httpx.ConnectError:
+      # Could not connect to the server
+      print("Network error — check your connection")
+  ```
 
-// Usage
-const { data, error } = await sdk.messages.sendChatMessage(params)
+  ```go Go
+  import (
+      "errors"
+      "net"
 
-if (error) {
-  ErrorLogger.log(error, {
-    operation: "sendChatMessage",
-    userId: params.userId,
-    hasMedia: !!params.mediaItems?.length
-  })
-}
-```
+      "github.com/ofauth-org/onlyfans-sdk-go"
+  )
 
-## Production Error Handling
+  account, err := client.Whoami(ctx)
+  if err != nil {
+      if apiErr, ok := err.(*ofauth.APIError); ok {
+          // API returned an error response (4xx, 5xx)
+          fmt.Printf("API error %d: %s\n", apiErr.Status, apiErr.Message)
+      } else if netErr, ok := err.(net.Error); ok && netErr.Timeout() {
+          // Request timed out
+          fmt.Println("Request timed out — try again")
+      } else {
+          // Network or other error
+          fmt.Println("Network error:", err)
+      }
+  }
+  ```
 
-### Global Error Handler
-```typescript
-class GlobalSDKErrorHandler {
-  private static instance: GlobalSDKErrorHandler
-  
-  static getInstance(): GlobalSDKErrorHandler {
-    if (!this.instance) {
-      this.instance = new GlobalSDKErrorHandler()
-    }
-    return this.instance
+  ```csharp C#
+  using OFAuth;
+
+  try
+  {
+      var account = await client.GetAsync<WhoamiResponse>("/v2/account/whoami");
   }
-  
-  async handleError(error: any, operation: string): Promise<void> {
-    // Log all errors
-    ErrorLogger.log(error, { operation })
-    
-    // Handle specific error types globally
-    switch (error.type) {
-      case "unauthorized":
-        await this.handleAuthError()
-        break
-      case "too_many_requests":
-        await this.handleRateLimit()
-        break
-      case "internal_server_error":
-        await this.handleServerError()
-        break
-    }
+  catch (OFAuthException ex)
+  {
+      // API returned an error response (4xx, 5xx)
+      Console.WriteLine($"API error {ex.Status}: {ex.Message}");
   }
-  
-  private async handleAuthError() {
-    // Clear invalid sessions, redirect to login
-    localStorage.removeItem("session")
-    window.location.href = "/login"
+  catch (TaskCanceledException)
+  {
+      // Request timed out
+      Console.WriteLine("Request timed out — try again");
   }
-  
-  private async handleRateLimit() {
-    // Show user-friendly rate limit message
-    console.log("Please wait before making more requests")
+  catch (HttpRequestException)
+  {
+      // Network error (DNS failure, connection refused, etc.)
+      Console.WriteLine("Network error — check your connection");
   }
-  
-  private async handleServerError() {
-    // Show maintenance message
-    console.log("Service temporarily unavailable")
-  }
-}
-```
+  ```
+</CodeGroup>
 
 ## Best Practices
 
 <CardGroup cols={2}>
-  <Card title="Always Check Errors" icon="shield-check">
-    **Never ignore the error property**
-    
-    ```typescript
-    const { data, error } = await sdk.method()
-    if (error) {
-      // Handle appropriately
-    }
-    ```
+  <Card title="Always Catch SDK Exceptions" icon="shield-check">
+    Wrap every API call in try/catch. Unhandled exceptions crash your application.
   </Card>
-  <Card title="Implement Retries" icon="refresh">
-    **Use retries for transient errors**
-    
-    ```typescript
-    if (error?.retry) {
-      await implementBackoff()
-      // Retry operation
-    }
-    ```
+  <Card title="Distinguish API vs Network Errors" icon="wifi">
+    Check the exception type to separate server responses from connectivity failures.
   </Card>
-  <Card title="Log Everything" icon="file-text">
-    **Comprehensive error logging**
-    
-    ```typescript
-    ErrorLogger.log(error, {
-      operation: "operationName",
-      context: additionalData
-    })
-    ```
+  <Card title="Retry Transient Errors" icon="rotate">
+    Implement exponential backoff for 429, 500, 502, and 503 status codes.
   </Card>
-  <Card title="User-Friendly Messages" icon="message-square">
-    **Show helpful error messages**
-    
-    ```typescript
-    const userMessage = getUserFriendlyMessage(error.type)
-    showNotification(userMessage)
-    ```
+  <Card title="Log Error Details" icon="file-lines">
+    Log `status`, `code`, and `message` to make debugging easier. Include `requestId` from the error details when contacting support.
+  </Card>
+  <Card title="Handle Auth Errors Gracefully" icon="key">
+    On 401 errors, prompt the user to re-authenticate via Link instead of retrying.
+  </Card>
+  <Card title="Set Timeouts" icon="clock">
+    Configure request timeouts to avoid hanging requests. Handle timeout errors separately from API errors.
   </Card>
 </CardGroup>
 
-## Error Type Reference
+## Next Steps
 
-| Type | Status | Retry | Description |
-|------|--------|-------|-------------|
-| `unauthorized` | 401 | ❌ | Invalid session/authentication |
-| `forbidden` | 403 | ❌ | Insufficient permissions |
-| `not_found` | 404 | ❌ | Resource doesn't exist |
-| `bad_request` | 400 | ❌ | Validation error |
-| `too_many_requests` | 429 | ✅ | Rate limit exceeded |
-| `internal_server_error` | 500 | ✅ | Server error |
-| `bad_gateway` | 502 | ✅ | Gateway error |
-| `service_unavailable` | 503 | ✅ | Service down |
-
-<Warning>
-  **Production Readiness**: Always implement proper error handling, logging, and user feedback in production applications.
-</Warning> 
+<CardGroup cols={3}>
+  <Card title="Error Reference" icon="book" href="/reference/error-handling">
+    Full list of error types and status codes
+  </Card>
+  <Card title="Rate Limiting" icon="gauge" href="/reference/rate-limiting">
+    Token bucket system and backoff strategies
+  </Card>
+  <Card title="Webhooks" icon="bell" href="/reference/webhooks">
+    Get notified of connection status changes
+  </Card>
+</CardGroup>
