--- a/sdk/core-concepts/configuration.mdx
+++ b/sdk/core-concepts/configuration.mdx
@@ -1,274 +1,340 @@
 ---
-title: "SDK Configuration"
-sidebarTitle: "Configuration"
-description: "Complete configuration reference for the OnlyFans SDK with all available options and modes"
+title: "Configuration"
+description: "Configuration options for the OFAuth SDKs including base URLs, HTTP clients, and timeouts"
 ---
 
 ## Overview
 
-The OnlyFans SDK supports three distinct modes of operation, each with its own configuration options. Choose the mode that best fits your use case and infrastructure requirements.
+Each OFAuth SDK accepts configuration during client initialization. The core options are the same across languages — API key, connection ID, base URL, and custom HTTP client — but the syntax follows each language's conventions.
 
 ## Configuration Options
 
-### Complete Configuration Reference
-
-```typescript
-interface OFSDKOptions {
-  mode: "access" | "direct" | "custom"
-  ofauthApiKey?: string
-  debugLog?: boolean
-  customOptions?: {
-    baseUrl: string
-    signRequests?: boolean
-    beforeRequest?: (url: string, request: RequestInit) => RequestInit
-  }
-}
-```
-
-<ParamField path="mode" type="string" required>
-  The SDK operation mode. Choose `"access"` for managed API calls, `"direct"` for full control, or `"custom"` for enterprise setups.
-</ParamField>
-
-<ParamField path="ofauthApiKey" type="string">
-  Your OFAuth API key. Required for `"access"` mode and when `signRequests: true` in custom mode.
-</ParamField>
-
-<ParamField path="debugLog" type="boolean" default="false">
-  Enable detailed request/response logging for debugging purposes.
-</ParamField>
-
-<ParamField path="customOptions.baseUrl" type="string">
-  Custom API base URL for custom mode. Requests will be prefixed with this URL.
-</ParamField>
-
-<ParamField path="customOptions.signRequests" type="boolean" default="false">
-  Whether to sign requests using OFAuth's dynamic rules in custom mode.
-</ParamField>
-
-<ParamField path="customOptions.beforeRequest" type="function">
-  Function to modify requests before they're sent. Useful for adding custom headers or authentication.
-</ParamField>
-
-## Configuration Modes
-
-### Access Mode (Recommended)
-
-**Best for**: Most applications, managed API calls through OFAuth
-
-```typescript
-import OFSDK from "@ofauth/onlyfans-sdk"
-
-const sdk = new OFSDK({
-  mode: "access",
-  ofauthApiKey: process.env.OFAUTH_API_KEY,
-  debugLog: false // Enable for development
-})
-```
-
-<Info>
-  Access mode uses OFAuth's managed infrastructure to handle OnlyFans API complexities automatically.
-</Info>
-
-**Features:**
-- Automatic request signing and session management
-- Built-in error handling and retry logic
-- No need to manage OnlyFans API changes
-- Simplified authentication flow
-- Usage tracking and analytics
-
-**Requirements:**
-- Valid OFAuth API key
-- Active OFAuth subscription
-
-### Direct Mode
-
-**Best for**: Full control over API requests, custom session management, local debugging
-
-```typescript
-import OFSDK from "@ofauth/onlyfans-sdk"
-
-const sdk = new OFSDK({
-  mode: "direct",
-  ofauthApiKey: process.env.OFAUTH_API_KEY, // Required for request signing
-  debugLog: true // Helpful for debugging direct API calls
-})
-```
-
-<Warning>
-  Direct mode requires manual session management and handling of OnlyFans API changes.
-</Warning>
-
-**Features:**
-- Direct communication with OnlyFans API
-- Full control over request/response handling
-- No usage costs for OFAuth services
-- Custom session management
-- Detailed debugging capabilities
-
-**Requirements:**
-- Valid OFAuth API key (for request signing rules)
-- Manual session management
-- Handling of OnlyFans API updates
-
-**Use Cases:**
-- Development and testing environments
-- Custom authentication flows
-- Applications with specific session requirements
-- Cost-sensitive implementations
-
-### Custom Mode
-
-**Best for**: Enterprise setups with custom proxy infrastructure
-
-```typescript
-import OFSDK from "@ofauth/onlyfans-sdk"
-
-const sdk = new OFSDK({
-  mode: "custom",
-  customOptions: {
-    baseUrl: "https://your-api-proxy.com",
-    signRequests: false, // Set to true if using OFAuth signing
-    beforeRequest: (url, request) => {
-      // Add custom headers or modify requests
-      request.headers = {
-        ...request.headers,
-        "X-Custom-Header": "your-value",
-        "Authorization": "Bearer " + process.env.CUSTOM_TOKEN
-      }
-      return request
-    }
-  },
-  ofauthApiKey: process.env.OFAUTH_API_KEY // Required if signRequests: true
-})
-```
-
-<Tip>
-  Custom mode is perfect for enterprise environments where requests need to go through internal proxies or custom infrastructure.
-</Tip>
-
-**Features:**
-- Custom API endpoint configuration
-- Request modification capabilities
-- Optional OFAuth request signing
-- Enterprise proxy support
-- Custom authentication integration
-
-**Requirements:**
-- Custom API infrastructure
-- OFAuth API key (if using request signing)
-
-**Use Cases:**
-- Enterprise environments with proxy requirements
-- Custom API gateways
-- Multi-tenant applications
-- Advanced security requirements
-
-## Environment Variables
-
-For security and deployment flexibility, use environment variables for sensitive configuration:
-
-```bash .env
-# Required for access mode and direct mode
-OFAUTH_API_KEY=sk_live_your_api_key_here
-
-# Optional: Enable debug logging
-OFSDK_DEBUG=true
-
-# Custom mode: Your custom API base URL
-CUSTOM_API_BASE_URL=https://your-custom-api.com
-```
-
 <CodeGroup>
-```typescript dotenv usage
-import dotenv from 'dotenv'
-dotenv.config()
+```typescript TypeScript
+import { createOFAuthClient } from '@ofauth/onlyfans-sdk';
 
-const sdk = new OFSDK({
-  mode: "access",
-  ofauthApiKey: process.env.OFAUTH_API_KEY,
-  debugLog: process.env.OFSDK_DEBUG === 'true'
-})
+const client = createOFAuthClient({
+  // Required: Your OFAuth API key
+  apiKey: 'sk_live_...',
+
+  // Optional: Default connection ID for Access API calls
+  connectionId: 'conn_xxx',
+
+  // Optional: Custom base URL (defaults to https://api-next.ofauth.com)
+  basePath: 'https://api-next.ofauth.com',
+
+  // Optional: Custom fetch implementation
+  fetchApi: customFetch,
+});
 ```
 
-```typescript environment-specific config
-const config = {
-  development: {
-    mode: "direct" as const,
-    debugLog: true
-  },
-  production: {
-    mode: "access" as const,
-    debugLog: false
-  }
-}
+```python Python
+from onlyfans_sdk import OFAuthClient
 
-const env = process.env.NODE_ENV || 'development'
-const sdk = new OFSDK({
-  ...config[env],
-  ofauthApiKey: process.env.OFAUTH_API_KEY
-})
+client = OFAuthClient(
+    # Required: Your OFAuth API key
+    api_key="sk_live_...",
+
+    # Optional: Custom base URL (defaults to https://api-next.ofauth.com)
+    base_url="https://api-next.ofauth.com",
+
+    # Optional: Default connection ID for Access API calls
+    connection_id="conn_xxx",
+
+    # Optional: Request timeout in seconds (defaults to 30.0)
+    timeout=30.0,
+)
+```
+
+```go Go
+import (
+    "net/http"
+    "time"
+
+    "github.com/ofauth-org/onlyfans-sdk-go"
+)
+
+client := ofauth.NewClient("sk_live_...").          // Required: API key
+    WithConnectionID("conn_xxx").                     // Optional: Default connection ID
+    WithBaseURL("https://api-next.ofauth.com").       // Optional: Custom base URL
+    WithHTTPClient(&http.Client{                      // Optional: Custom HTTP client
+        Timeout: 30 * time.Second,
+    })
+```
+
+```csharp C#
+using OFAuth;
+
+var client = new OFAuthClient(
+    apiKey: "sk_live_...",                              // Required: API key
+    baseUrl: "https://api-next.ofauth.com",             // Optional: Custom base URL
+    httpClient: customHttpClient                        // Optional: Custom HttpClient
+).WithConnectionId("conn_xxx");                         // Optional: Default connection ID
 ```
 </CodeGroup>
 
-## Debug Configuration
+## Options Reference
 
-Enable detailed logging to troubleshoot issues during development:
+### `apiKey` (required)
 
-```typescript
-const sdk = new OFSDK({
-  mode: "direct",
-  ofauthApiKey: process.env.OFAUTH_API_KEY,
-  debugLog: true // Enables detailed request/response logging
-})
+Your OFAuth API key. Sent as the `apiKey` header on every request.
 
-// Example debug output:
-// [OFSDK Request]: Making request to GET https://onlyfans.com/api2/v2/users/me
-// [OFSDK Response]: 200 OK
+- **Production**: `sk_live_...`
+- **Sandbox**: `sk_sandbox_...`
+
+### `connectionId` (optional)
+
+Default connection ID for Access API calls. Sent as the `x-connection-id` header. Can be overridden per-request.
+
+### `basePath` / `baseUrl` (optional)
+
+Override the API base URL. Defaults to `https://api-next.ofauth.com`. Useful for pointing to sandbox or custom environments.
+
+| Language | Parameter name | Default |
+|----------|---------------|---------|
+| TypeScript | `basePath` | `https://api-next.ofauth.com` |
+| Python | `base_url` | `https://api-next.ofauth.com` |
+| Go | `WithBaseURL()` | `https://api-next.ofauth.com` |
+| C# | `baseUrl` | `https://api-next.ofauth.com` |
+
+### Custom HTTP Client (optional)
+
+Override the underlying HTTP client for custom transport, proxies, or middleware.
+
+| Language | Parameter | Default |
+|----------|-----------|---------|
+| TypeScript | `fetchApi` | Global `fetch` |
+| Python | `timeout` | `httpx.Client` with 30s timeout |
+| Go | `WithHTTPClient()` | `http.DefaultClient` |
+| C# | `httpClient` | New `HttpClient` instance |
+
+## Environment Variables
+
+Store sensitive configuration in environment variables:
+
+```bash .env
+# Required
+OFAUTH_API_KEY=sk_live_your_api_key_here
+
+# Optional
+OFAUTH_CONNECTION_ID=conn_xxx
 ```
+
+<CodeGroup>
+```typescript TypeScript
+const client = createOFAuthClient({
+  apiKey: process.env.OFAUTH_API_KEY,
+  connectionId: process.env.OFAUTH_CONNECTION_ID,
+});
+```
+
+```python Python
+import os
+
+client = OFAuthClient(
+    api_key=os.environ["OFAUTH_API_KEY"],
+    connection_id=os.environ.get("OFAUTH_CONNECTION_ID"),
+)
+```
+
+```go Go
+import "os"
+
+client := ofauth.NewClient(os.Getenv("OFAUTH_API_KEY")).
+    WithConnectionID(os.Getenv("OFAUTH_CONNECTION_ID"))
+```
+
+```csharp C#
+var client = new OFAuthClient(
+    apiKey: Environment.GetEnvironmentVariable("OFAUTH_API_KEY")
+).WithConnectionId(
+    Environment.GetEnvironmentVariable("OFAUTH_CONNECTION_ID")
+);
+```
+</CodeGroup>
 
 <Warning>
-  Never enable debug logging in production as it may expose sensitive information in logs.
+  Never commit API keys to version control. Add `.env` to your `.gitignore`.
 </Warning>
 
-## Advanced Custom Configuration
+## Custom HTTP Client Configuration
 
-For complex enterprise setups, the `beforeRequest` function provides powerful request modification capabilities:
+### TypeScript — Custom Fetch
+
+Pass a custom `fetch` implementation for proxying, logging, or using a different HTTP library:
 
 ```typescript
-const sdk = new OFSDK({
-  mode: "custom",
-  customOptions: {
-    baseUrl: "https://api-gateway.company.com/onlyfans-proxy",
-    beforeRequest: (url, request) => {
-      // Add enterprise authentication
-      request.headers = {
-        ...request.headers,
-        "X-Enterprise-Token": process.env.ENTERPRISE_TOKEN,
-        "X-Request-ID": crypto.randomUUID(),
-        "X-Timestamp": Date.now().toString()
-      }
-      
-      // Add request tracking
-      console.log(`[Enterprise] Request to: ${url}`)
-      
-      // Modify request based on URL patterns
-      if (url.includes('/messages/')) {
-        request.headers["X-Rate-Limit-Bypass"] = "true"
-      }
-      
-      return request
-    }
-  }
-})
+import { createOFAuthClient } from '@ofauth/onlyfans-sdk';
+
+// Example: Add request logging
+const loggingFetch: typeof fetch = async (input, init) => {
+  console.log(`[OFAuth] ${init?.method ?? 'GET'} ${input}`);
+  return fetch(input, init);
+};
+
+const client = createOFAuthClient({
+  apiKey: process.env.OFAUTH_API_KEY,
+  fetchApi: loggingFetch,
+});
 ```
+
+### Python — Timeout Configuration
+
+The Python SDK uses `httpx` internally. Configure the timeout during initialization:
+
+```python
+from onlyfans_sdk import OFAuthClient
+
+# Set a 60-second timeout
+client = OFAuthClient(
+    api_key="your-api-key",
+    timeout=60.0,
+)
+
+# Use as a context manager for automatic cleanup
+with OFAuthClient(api_key="your-api-key") as client:
+    result = account.whoami(client)
+```
+
+### Go — Custom HTTP Client
+
+Pass any `*http.Client` for custom transport, timeouts, or TLS configuration:
+
+```go
+import (
+    "crypto/tls"
+    "net/http"
+    "time"
+
+    "github.com/ofauth-org/onlyfans-sdk-go"
+)
+
+httpClient := &http.Client{
+    Timeout: 60 * time.Second,
+    Transport: &http.Transport{
+        TLSClientConfig: &tls.Config{MinVersion: tls.VersionTLS13},
+        MaxIdleConns:    100,
+    },
+}
+
+client := ofauth.NewClient("your-api-key").
+    WithHTTPClient(httpClient)
+```
+
+### C# — Custom HttpClient
+
+Pass a pre-configured `HttpClient` or use `IHttpClientFactory` for connection pooling:
+
+```csharp
+using OFAuth;
+
+// Custom HttpClient with timeout
+var httpClient = new HttpClient
+{
+    Timeout = TimeSpan.FromSeconds(60)
+};
+
+var client = new OFAuthClient(
+    apiKey: "your-api-key",
+    httpClient: httpClient
+);
+
+// With dependency injection and IHttpClientFactory
+services.AddHttpClient<OFAuthClient>((sp, http) =>
+{
+    http.Timeout = TimeSpan.FromSeconds(60);
+});
+```
+
+## Base URL Configuration
+
+Override the base URL for sandbox testing or custom proxy setups:
+
+<CodeGroup>
+```typescript TypeScript
+// Point to sandbox
+const client = createOFAuthClient({
+  apiKey: 'sk_sandbox_...',
+  basePath: 'https://api-sandbox.ofauth.com',
+});
+```
+
+```python Python
+# Point to sandbox
+client = OFAuthClient(
+    api_key="sk_sandbox_...",
+    base_url="https://api-sandbox.ofauth.com",
+)
+```
+
+```go Go
+// Point to sandbox
+client := ofauth.NewClient("sk_sandbox_...").
+    WithBaseURL("https://api-sandbox.ofauth.com")
+```
+
+```csharp C#
+// Point to sandbox
+var client = new OFAuthClient(
+    apiKey: "sk_sandbox_...",
+    baseUrl: "https://api-sandbox.ofauth.com"
+);
+```
+</CodeGroup>
+
+## Resource Cleanup
+
+Some SDKs hold HTTP connections that should be closed when you're done:
+
+<CodeGroup>
+```typescript TypeScript
+// No cleanup needed — fetch handles connections automatically
+```
+
+```python Python
+# Option 1: Context manager (recommended)
+with OFAuthClient(api_key="your-api-key") as client:
+    result = account.whoami(client)
+# Automatically closed
+
+# Option 2: Manual cleanup
+client = OFAuthClient(api_key="your-api-key")
+try:
+    result = account.whoami(client)
+finally:
+    client.close()
+```
+
+```go Go
+// No cleanup needed — Go's HTTP client handles connections automatically
+```
+
+```csharp C#
+// Option 1: using statement (recommended)
+using var client = new OFAuthClient("your-api-key");
+var account = await client.GetAsync<WhoamiResponse>("/v2/account/whoami");
+// Automatically disposed
+
+// Option 2: Manual disposal
+var client = new OFAuthClient("your-api-key");
+try
+{
+    var account = await client.GetAsync<WhoamiResponse>("/v2/account/whoami");
+}
+finally
+{
+    client.Dispose();
+}
+```
+</CodeGroup>
 
 ## Next Steps
 
 <CardGroup cols={2}>
-  <Card title="Authentication Setup" icon="key" href="/sdk/core-concepts/authentication">
-    Configure authentication modes and establish secure connections to OnlyFans
+  <Card title="Authentication" icon="key" href="/sdk/core-concepts/authentication">
+    Learn about API keys and connection IDs
   </Card>
-  <Card title="Architecture Overview" icon="blueprint" href="/sdk/core-concepts/architecture">
-    Understand the SDK's internal structure and design patterns
+  <Card title="Architecture" icon="sitemap" href="/sdk/core-concepts/architecture">
+    Understand SDK structure and API namespaces
   </Card>
-</CardGroup> 
+</CardGroup>
