--- a/sdk/index.mdx
+++ b/sdk/index.mdx
@@ -1,213 +1,144 @@
 ---
-title: "OnlyFans TypeScript SDK"
-sidebarTitle: "Introduction"
-description: "The easiest way to integrate OnlyFans into your JavaScript/TypeScript applications"
+title: "SDKs"
+description: "Official OFAuth SDKs for TypeScript, Python, Go, and C# — plus no-code integrations for n8n and Zapier"
 ---
 
-## The SDK That Powers OnlyFans Integrations
+## Official SDKs
 
-Production-ready TypeScript SDK that eliminates 90% of OnlyFans integration complexity. Full type safety, automatic error handling, and built-in retry logic.
+OFAuth provides first-party SDKs generated from our OpenAPI spec, so types and methods always match the latest API. Pick the language that fits your stack.
 
-<Info>
-  **Using Python, Go, PHP, or another language?** Use our [REST APIs](/api-reference/access/overview) directly - they work with any language that can make HTTP requests. This SDK documentation covers TypeScript/JavaScript only.
-</Info>
-
-### Development ROI
-
-* **\$50K-120K saved** in first-year development costs
-* **17+ weeks** of integration work eliminated
-* **10x faster** feature development ongoing
-* **Same-day deployment** capability from install
-
-<CardGroup cols={2}>
-  <Card title="10x Faster Development" icon="rocket">
-    Pre-built methods, TypeScript definitions, and automatic error handling eliminate boilerplate code
-  </Card>
-
-  <Card title="Production Ready" icon="shield">
-    Built-in retry logic, rate limiting, session management, and error recovery patterns
-  </Card>
-
-  <Card title="Type Safe" icon="code">
-    Full TypeScript support with IntelliSense, autocomplete, and compile-time error checking
-  </Card>
-
-  <Card title="Self-Documenting" icon="book">
-    Inline documentation, examples, and guided development experience
-  </Card>
-</CardGroup>
-
-***
-
-## SDK vs REST API
-
-Choose the SDK if you're using TypeScript/JavaScript. Use the REST API directly for other languages.
-
-|                    | TypeScript SDK         | REST API |
-| ------------------ | ---------------------- | -------- |
-| **Languages**      | TypeScript, JavaScript | Any      |
-| **Type Safety**    | Full IntelliSense      | None     |
-| **Error Handling** | Automatic with retry   | Manual   |
-| **Learning Curve** | Lower                  | Higher   |
-
-<CardGroup cols={2}>
-  <Card title="SDK Quickstart" icon="code" href="/sdk/quickstart">
-    Get started with the TypeScript SDK
-  </Card>
-
-  <Card title="REST API Guide" icon="globe" href="/api-reference/access/overview">
-    Use the API directly from any language
-  </Card>
-</CardGroup>
-
-***
-
-## Why Choose the SDK Over Direct API?
-
-### Before: Raw API Calls
-
-```javascript
-// Manual HTTP requests with lots of boilerplate
-const response = await fetch("https://api.ofauth.com/v2/access/proxy/chats/rooms/123/messages", {
-  method: "POST",
-  headers: {
-    "apikey": process.env.OFAUTH_API_KEY,
-    "x-connection-id": "conn_123",
-    "Content-Type": "application/json"
-  },
-  body: JSON.stringify({
-    text: "Hello!",
-    mediaItems: ["/path/to/image.jpg"],
-    price: 10.00
-  })
-})
-
-// Manual error handling
-if (!response.ok) {
-  const error = await response.json()
-  if (error.statusCode === 429) {
-    // Manual retry logic
-    await new Promise(resolve => setTimeout(resolve, 1000))
-    // Try again...
-  }
-  throw new Error(error.message)
-}
-
-const result = await response.json()
+<CodeGroup>
+```bash TypeScript
+npm install @ofauth/onlyfans-sdk
 ```
 
-### After: SDK
+```bash Python
+pip install onlyfans-sdk
+```
 
-```typescript
-// One line with built-in error handling and retries
-const { data, error } = await sdk.messages.sendChatMessage({
-  authentication: { connectionId: "conn_123" },
-  userId: 123,
-  params: {
-    text: "Hello!",
-    mediaItems: ["/path/to/image.jpg"],
-    price: 10.00
-  }
-})
+```bash Go
+go get github.com/ofauth-org/onlyfans-sdk-go
+```
 
-if (error) {
-  console.error("Message failed:", error.message)
-  // Automatic retry suggestions and structured error types
-} else {
-  console.log("Message sent:", data.id)
+```bash C#
+dotnet add package OnlyFans.SDK
+```
+</CodeGroup>
+
+### Hello, OFAuth
+
+Verify your API key with a single call:
+
+<CodeGroup>
+```typescript TypeScript
+import { createOFAuthClient } from '@ofauth/onlyfans-sdk';
+
+const client = createOFAuthClient({ apiKey: 'your-api-key' });
+
+const account = await client.account.whoami();
+console.log(account.id, account.permissions);
+```
+
+```python Python
+from onlyfans_sdk import OFAuthClient, account
+
+client = OFAuthClient(api_key="your-api-key")
+
+result = account.whoami(client)
+print(result["id"], result["permissions"])
+```
+
+```go Go
+package main
+
+import (
+    "context"
+    "fmt"
+    "log"
+
+    "github.com/ofauth-org/onlyfans-sdk-go"
+)
+
+func main() {
+    client := ofauth.NewClient("your-api-key")
+
+    acc, err := client.Whoami(context.Background())
+    if err != nil {
+        log.Fatal(err)
+    }
+
+    fmt.Println(acc.Id, acc.Permissions)
 }
 ```
 
+```csharp C#
+using OFAuth;
+
+var client = new OFAuthClient("your-api-key");
+
+var account = await client.GetAsync<WhoamiResponse>("/v2/account/whoami");
+Console.WriteLine($"{account.Id} {string.Join(", ", account.Permissions)}");
+```
+</CodeGroup>
+
 ***
 
-## What You Can Build
-
-The SDK unlocks powerful OnlyFans integration possibilities:
+## Feature Highlights
 
 <CardGroup cols={3}>
-  <Card title="Creator Analytics" icon="chart-bar">
-    **Performance Dashboards** - Track earnings, post performance, and subscriber growth
+  <Card title="Full Type Safety" icon="code">
+    Every SDK is generated from the OpenAPI spec — response types, request params, and error codes are all typed.
   </Card>
 
-  <Card title="Content Management" icon="file-text">
-    **Automated Publishing** - Upload media, create posts, and schedule content
+  <Card title="Automatic Pagination" icon="arrows-rotate">
+    Async iterators (TypeScript) and generators (Python) handle pagination automatically so you can `for-await` over any list.
   </Card>
 
-  <Card title="Fan Engagement" icon="comments">
-    **Messaging Automation** - Send personalized messages and manage campaigns
+  <Card title="Proxy Support" icon="globe">
+    Call any OnlyFans API endpoint directly through the OFAuth proxy when the typed methods don't cover your use case.
   </Card>
 
-  <Card title="Subscriber Tools" icon="users">
-    **List Management** - Organize subscribers and segment audiences
+  <Card title="Media Upload" icon="cloud-arrow-up">
+    Upload images and videos with automatic chunking and progress callbacks built into every SDK.
   </Card>
 
-  <Card title="Revenue Optimization" icon="dollar-sign">
-    **Business Intelligence** - Analyze content performance and optimize pricing
+  <Card title="Webhook Verification" icon="shield-check">
+    Verify incoming webhook signatures to ensure events are authentic — included out of the box.
   </Card>
 
-  <Card title="Integration Tools" icon="link">
-    **Custom Workflows** - Build integrations with other platforms
+  <Card title="Error Handling" icon="triangle-exclamation">
+    SDKs throw typed exceptions (`OFAuthAPIError`, `OFAuthError`, `APIError`, `OFAuthException`) with status, code, and details.
   </Card>
 </CardGroup>
 
 ***
 
-## Key Features
+## SDK Comparison
 
-### Complete Type Safety
-
-* **Full TypeScript definitions** with IntelliSense autocomplete
-* **Compile-time validation** prevents invalid parameter combinations
-* **Context-aware suggestions** guide correct API usage
-
-```typescript
-// Full IntelliSense support and validation
-const { data, error } = await sdk.statistics.getStats({
-  statType: "posts",    // IDE autocompletes valid options
-  params: { 
-    by: "purchases",    // Context-aware validation
-    limit: 20          // Type-checked parameters
-  }
-})
-```
-
-### Complete OnlyFans Coverage
-
-* **User Management**: Profiles, subscribers, connections
-* **Content Creation**: Posts, media uploads, pricing
-* **Messaging**: Direct messages, mass messaging, rich content
-* **Analytics**: Earnings, subscriber metrics, performance insights
-* **Business Tools**: Promotions, subscriber management, automation
-
-### Production Features
-
-* **Error Handling**: Structured error types with retry recommendations
-* **Request Signing**: Automatic OnlyFans API signature generation
-* **Monitoring**: Built-in logging and debugging capabilities
+| | TypeScript | Python | Go | C# |
+| --- | --- | --- | --- | --- |
+| **Package** | `@ofauth/onlyfans-sdk` | `onlyfans-sdk` | `onlyfans-sdk-go` | `OnlyFans.SDK` |
+| **Repository** | [onlyfans-sdk-typescript](https://github.com/OFAuth-org/onlyfans-sdk-typescript) | [onlyfans-sdk-python](https://github.com/OFAuth-org/onlyfans-sdk-python) | [onlyfans-sdk-go](https://github.com/OFAuth-org/onlyfans-sdk-go) | [onlyfans-sdk-csharp](https://github.com/OFAuth-org/onlyfans-sdk-csharp) |
+| **Init** | `createOFAuthClient()` | `OFAuthClient()` | `ofauth.NewClient()` | `new OFAuthClient()` |
+| **Architecture** | Nested client with namespaces | Functional modules + client | 126+ typed methods, builder pattern | `GetAsync<T>(path)` with 473 model classes |
+| **Types** | Inline types, full IntelliSense | Pydantic v2 models | Generated response structs | Generated classes with `JsonPropertyName` |
+| **Pagination** | Async iterators (`for await`) | Generators (`for ... in`) | Manual (query params) | Manual (query params) |
+| **Dependencies** | None (uses `fetch`) | `httpx` | Zero (standard library) | `System.Net.Http`, `System.Text.Json` |
+| **Key Feature** | Nested namespaces (`client.access.listPosts()`) | Functional API (`posts.list_posts(client)`) | Context-based cancellation | DI support, `CancellationToken` |
 
 ***
 
-## SDK Architecture
+## No-Code Integrations
 
-The SDK is organized into logical modules that mirror OnlyFans functionality:
+Don't want to write code? OFAuth also provides integrations for popular automation platforms:
 
-<CardGroup cols={3}>
-  <Card title="Authentication" icon="key">
-    **Link & Account Modules**
-
-    Handle login flows, session management, and connection lifecycle
+<CardGroup cols={2}>
+  <Card title="n8n" icon="n" href="https://github.com/OFAuth-org/onlyfans-n8n">
+    Community node for n8n workflows. Connect OFAuth to 400+ other services with drag-and-drop automation.
   </Card>
 
-  <Card title="Content & Users" icon="users">
-    **Messages, Posts, User Modules**
-
-    Manage content creation, user interactions, and profile operations
-  </Card>
-
-  <Card title="Business & Analytics" icon="chart-line">
-    **Statistics, Subscriptions, Vault**
-
-    Access earnings data, subscriber metrics, and media management
+  <Card title="Zapier" icon="bolt" href="https://github.com/OFAuth-org/onlyfans-zapier">
+    Zapier integration with typed input fields. Build automated workflows without writing a single line of code.
   </Card>
 </CardGroup>
 
@@ -215,49 +146,20 @@ The SDK is organized into logical modules that mirror OnlyFans functionality:
 
 ## Get Started
 
-<Steps>
-  <Step title="Install the SDK">
-    ```bash
-    npm install @ofauth/onlyfans-sdk
-    ```
-  </Step>
-
-  <Step title="Initialize with your API key">
-    ```typescript
-    import OFSDK from "@ofauth/onlyfans-sdk"
-
-    const sdk = new OFSDK({
-      mode: "access",
-      ofauthApiKey: process.env.OFAUTH_API_KEY
-    })
-    ```
-  </Step>
-
-  <Step title="Start building">
-    Use any SDK module to interact with OnlyFans data.
-  </Step>
-</Steps>
-
 <CardGroup cols={2}>
-  <Card title="Full Installation Guide" icon="download" href="/sdk/quickstart">
-    Complete setup with all configuration options
+  <Card title="Quickstart" icon="rocket" href="/sdk/quickstart">
+    Install an SDK and make your first API call in under 5 minutes
   </Card>
 
-  <Card title="SDK Architecture" icon="boxes" href="/sdk/core-concepts/architecture">
-    Understand the modular structure
+  <Card title="Architecture" icon="sitemap" href="/sdk/core-concepts/architecture">
+    Understand how the SDKs are structured and how they map to the API
   </Card>
 
-  <Card title="Authentication Setup" icon="key" href="/sdk/core-concepts/authentication">
-    Configure connection flows
+  <Card title="Configuration" icon="gear" href="/sdk/core-concepts/configuration">
+    Connection IDs, custom base URLs, proxy setup, and advanced options
   </Card>
 
-  <Card title="Module Reference" icon="book" href="/sdk/modules/authentication/link-authentication">
-    Explore all available methods
+  <Card title="Error Handling" icon="triangle-exclamation" href="/sdk/advanced/error-handling">
+    Typed exceptions, retry strategies, and debugging tips
   </Card>
 </CardGroup>
-
-***
-
-<Warning>
-  **Ready for Production?** Review our [Integration Checklist](/setup/integration-checklist) for important deployment and security information.
-</Warning>
