--- a/sdk/modules/analytics.mdx
+++ b/sdk/modules/analytics.mdx
@@ -1,306 +1,694 @@
 ---
-title: "Analytics"
-description: "Track performance metrics and earnings with full TypeScript support and automatic parameter validation"
+title: "Earnings & Analytics"
+description: "Access earnings data, transaction history, chargebacks, and content performance analytics"
 ---
 
-## Overview
+## Earnings Chart
 
-The Statistics module (`sdk.statistics`) provides comprehensive analytics for content performance, earnings, and audience insights with **complete type safety** and **automatic parameter validation**.
+Get time-series earnings data for a connection. Use `startDate` and `endDate` to specify a date range, and `by` to break down by earning type.
 
-<Card title="Statistics Module" icon="chart-bar">
-  **sdk.statistics** - Analytics, earnings, and performance tracking with IntelliSense support
-</Card>
+<CodeGroup>
+```typescript TypeScript
+import { createOFAuthClient } from '@ofauth/onlyfans-sdk';
 
-## Why Use the SDK for Analytics?
+const client = createOFAuthClient({
+  apiKey: 'your-api-key',
+  connectionId: 'conn_xxx',
+});
 
-<CardGroup cols={2}>
-  <Card title="Type Safety" icon="shield">
-    **Full TypeScript definitions** with autocomplete, IntelliSense, and compile-time validation for all parameters
-  </Card>
-  <Card title="Parameter Validation" icon="check-circle">
-    **Automatic validation** ensures correct parameter types, date formats, and enum values before API calls
-  </Card>
-</CardGroup>
+const chart = await client.access.earnings.getChart({
+  startDate: '2024-01-01',
+  endDate: '2024-01-31',
+  by: 'total',         // 'total' | 'messages' | 'tips' | 'stream' | 'post' | 'subscribes' | ...
+  withTotal: true,
+});
+```
 
-## Get Statistics
+```python Python
+from onlyfans_sdk import OFAuthClient, earnings
 
-Get detailed statistics for different content types with **compile-time parameter validation**.
+client = OFAuthClient(api_key="your-api-key", connection_id="conn_xxx")
 
-```typescript
-// ✅ Full type safety - IDE will autocomplete statType options
-const { data, error } = await sdk.statistics.getStats({
-  authentication: { connectionId: "conn_123" },
-  statType: "posts", // TypeScript validates: 'posts' | 'streams' | 'stories' | etc.
-  params: {
-    startDate: new Date("2024-01-01"), // ✅ Automatic Date validation
-    endDate: new Date("2024-01-31"),   // ✅ Ensures proper date format
-    by: "purchases", // ✅ Validates against allowed values for 'posts'
-    limit: 20,       // ✅ Type-checked as number
-    offset: 0
-  }
+chart = earnings.list_charts(
+    client,
+    start_date="2024-01-01",
+    end_date="2024-01-31",
+    by="total",
+    with_total=True,
+)
+```
+
+```go Go
+earnings, err := client.GetAccessEarningsChart(ctx, &ofauth.RequestOptions{
+    Query: url.Values{
+        "startDate": []string{"2024-01-01"},
+        "endDate":   []string{"2024-01-31"},
+        "by":        []string{"total"},
+        "withTotal": []string{"true"},
+    },
 })
-
-// ✅ Response is fully typed
-if (data) {
-  console.log(data.total)    // TypeScript knows this exists
-  console.log(data.breakdown) // IntelliSense shows available properties
+if err != nil {
+    log.Fatal(err)
 }
 ```
 
-### Available Statistics Types
-
-<AccordionGroup>
-  <Accordion title="Posts Analytics">
-    ```typescript
-    // Posts performance metrics
-    const { data, error } = await sdk.statistics.getStats({
-      authentication: { connectionId },
-      statType: "posts",
-      params: {
-        by: "purchases" | "tips" | "views" | "likes" | "comments", // ✅ Validated
-        startDate: new Date("2024-01-01"),
-        endDate: new Date("2024-01-31"),
-        limit: 20
-      }
-    })
-    ```
-  </Accordion>
-  
-  <Accordion title="Mass Messages Analytics">
-    ```typescript
-    // Message campaign performance
-    const { data, error } = await sdk.statistics.getStats({
-      authentication: { connectionId },
-      statType: "mass_messages",
-      params: {
-        startDate: new Date("2024-01-01"),
-        endDate: new Date("2024-01-31")
-      }
-    })
-    ```
-  </Accordion>
-  
-  <Accordion title="Visitor Analytics">
-    ```typescript
-    // Geographic visitor data
-    const { data, error } = await sdk.statistics.getStats({
-      authentication: { connectionId },
-      statType: "visitor_countries",
-      params: {
-        startDate: new Date("2024-01-01"),
-        endDate: new Date("2024-01-31")
-      }
-    })
-    ```
-  </Accordion>
-</AccordionGroup>
-
-<ParamField path="statType" type="StatType" required>
-  **Type-validated options**: `"posts"` | `"streams"` | `"stories"` | `"visitor_countries"` | `"mass_messages"` | `"promotions"` | `"trials"` | `"campaigns"`
-</ParamField>
-
-<ParamField path="params.by" type="string">
-  **Context-aware validation**: Available options change based on `statType` (TypeScript enforces correct combinations)
-</ParamField>
-
-## Chart Statistics
-
-Get visualization-ready chart data with **automatic date validation**.
-
-```typescript
-// ✅ TypeScript ensures chartType matches available options
-const { data, error } = await sdk.statistics.getChartStats({
-  authentication: { connectionId: "conn_123" },
-  chartType: "earnings", // Autocomplete shows: 'posts' | 'streams' | 'earnings' | etc.
-  params: {
-    startDate: new Date("2024-01-01"), // ✅ Date objects validated automatically
-    endDate: new Date("2024-01-31"),
-    withTotal: true,                   // ✅ Boolean type enforced
-    by: "purchases"                    // ✅ Context-aware validation
-  }
-})
-
-// ✅ Typed response - no guessing about data structure
-if (data) {
-  data.forEach(item => {
-    console.log(item.date)   // TypeScript knows structure
-    console.log(item.value)  // IntelliSense shows properties
-  })
-}
-```
-
-## Transaction History
-
-Retrieve detailed transaction data with **enum validation** for transaction types.
-
-```typescript
-// ✅ Transaction types are fully validated
-const { data, error } = await sdk.statistics.getTransactions({
-  authentication: { connectionId: "conn_123" },
-  params: {
-    startDate: new Date("2024-01-01"),
-    type: "chat_messages", // ✅ Validated: 'chat_messages' | 'post' | 'stream' | 'subscribes' | 'tips'
-    tipsSource: "chat"     // ✅ Context-validated: only valid when type is 'tips'
-  }
-})
-```
-
-### Transaction Type Validation
-
-The SDK automatically validates transaction parameters based on context:
-
-```typescript
-// ✅ TypeScript prevents invalid combinations
-const tipsTransaction = await sdk.statistics.getTransactions({
-  authentication: { connectionId },
-  params: {
-    type: "tips",
-    tipsSource: "chat" // ✅ Required and validated when type is 'tips'
-  }
-})
-
-// ❌ TypeScript error - tipsSource not valid for this type
-const invalidTransaction = await sdk.statistics.getTransactions({
-  authentication: { connectionId },
-  params: {
-    type: "chat_messages",
-    tipsSource: "chat" // ❌ Compile-time error!
-  }
-})
-```
-
-## Post-Specific Analytics
-
-Get statistics for individual posts with **automatic ID validation**.
-
-```typescript
-// ✅ Post ID type-checked as number
-const { data, error } = await sdk.statistics.getPostStatsById({
-  authentication: { connectionId: "conn_123" },
-  postId: 123456 // ✅ Must be number, not string
-})
-
-// ✅ Response includes comprehensive post metrics
-if (data) {
-  console.log(`Views: ${data.views}`)
-  console.log(`Likes: ${data.likes}`) 
-  console.log(`Revenue: $${data.revenue}`)
-}
-```
-
-## Advanced Analytics Integration
-
-### Type-Safe Revenue Analysis
-
-```typescript
-// ✅ Complete type safety throughout the analytics pipeline
-async function analyzeRevenue(connectionId: string): Promise<{
-  totalRevenue: number;
-  topPosts: Array<{ id: number; revenue: number }>;
-  period: string;
-} | null> {
-  
-  const earningsResult = await sdk.statistics.getStats({
-    authentication: { connectionId },
-    statType: "posts",  // ✅ TypeScript validates
-    params: {
-      startDate: new Date("2024-01-01"),
-      endDate: new Date("2024-01-31"), 
-      by: "purchases",  // ✅ Valid for 'posts' statType
-      limit: 10
+```csharp C#
+var chart = await client.GetAsync<EarningsChartResponse>(
+    "/v2/access/earnings/chart",
+    query: new Dictionary<string, string?>
+    {
+        ["startDate"] = "2024-01-01",
+        ["endDate"] = "2024-01-31",
+        ["by"] = "total",
+        ["withTotal"] = "true"
     }
-  })
-  
-  if (earningsResult.error) {
-    console.error("Analytics error:", earningsResult.error.message)
-    return null
-  }
-  
-  // ✅ earningsResult.data is fully typed
-  return {
-    totalRevenue: earningsResult.data.total,
-    topPosts: earningsResult.data.breakdown,
-    period: "January 2024"
-  }
+);
+```
+</CodeGroup>
+
+**`by` parameter options:** `total`, `messages`, `tips`, `stream`, `post`, `subscribes`, `tips_profile`, `tips_post`, `tips_chat`, `tips_stream`, `tips_story`, `ref`
+
+## Transactions
+
+List individual earnings transactions, optionally filtered by type.
+
+<CodeGroup>
+```typescript TypeScript
+// List transactions
+const transactions = await client.access.earnings.listTransactions({
+  startDate: '2024-01-01',
+  type: 'tips',            // 'subscribes' | 'chat_messages' | 'post' | 'stream' | 'tips'
+  tipsSource: 'chat',      // 'chat' | 'post_all' | 'profile' | 'story' | 'stream'
+});
+
+// Auto-paginate through all transactions
+for await (const tx of client.access.earnings.iterateTransactions({
+  type: 'tips',
+})) {
+  console.log(tx);
 }
 ```
 
-### Batch Analytics with Type Safety
+```python Python
+# List transactions
+transactions = earnings.list_transactions(
+    client,
+    start_date="2024-01-01",
+    type="tips",
+    tips_source="chat",
+)
 
-```typescript
-// ✅ All API calls are type-validated
-async function createAnalyticsDashboard(connectionId: string) {
-  const [posts, messages, earnings] = await Promise.all([
-    sdk.statistics.getStats({
-      authentication: { connectionId },
-      statType: "posts",
-      params: { by: "views", limit: 5 }    // ✅ Validated combination
-    }),
-    sdk.statistics.getStats({
-      authentication: { connectionId },
-      statType: "mass_messages"            // ✅ No 'by' param needed for messages
-    }),
-    sdk.statistics.getChartStats({
-      authentication: { connectionId },
-      chartType: "earnings",
-      params: { withTotal: true }          // ✅ Boolean type enforced
-    })
-  ])
-  
-  // ✅ All responses are fully typed
-  return {
-    topPosts: posts.data?.breakdown || [],
-    messageStats: messages.data?.total || 0,
-    earningsChart: earnings.data || []
-  }
+# Auto-paginate through all transactions
+for tx in earnings.iter_transactions(client, type="tips"):
+    print(tx)
+```
+
+```go Go
+transactions, err := client.ListAccessEarningsTransactions(ctx, &ofauth.RequestOptions{
+    Query: url.Values{
+        "startDate":  []string{"2024-01-01"},
+        "type":       []string{"tips"},
+        "tipsSource": []string{"chat"},
+    },
+})
+```
+
+```csharp C#
+var transactions = await client.GetAsync<EarningsTransactionsResponse>(
+    "/v2/access/earnings/transactions",
+    query: new Dictionary<string, string?>
+    {
+        ["startDate"] = "2024-01-01",
+        ["type"] = "tips",
+        ["tipsSource"] = "chat"
+    }
+);
+```
+</CodeGroup>
+
+## Chargebacks
+
+List chargeback records with optional date range filtering.
+
+<CodeGroup>
+```typescript TypeScript
+const chargebacks = await client.access.earnings.listChargebacks({
+  startDate: '2024-01-01',
+  endDate: '2024-01-31',
+  limit: 20,
+  offset: 0,
+});
+
+// Auto-paginate through all chargebacks
+for await (const cb of client.access.earnings.iterateChargebacks({
+  startDate: '2024-01-01',
+  endDate: '2024-01-31',
+})) {
+  console.log(cb);
 }
 ```
 
-## Error Handling with Type Safety
+```python Python
+chargebacks = earnings.list_chargebacks(
+    client,
+    start_date="2024-01-01",
+    end_date="2024-01-31",
+    limit=20,
+)
 
-Analytics operations benefit from **structured error types**:
+# Auto-paginate
+for cb in earnings.iter_chargebacks(client, start_date="2024-01-01"):
+    print(cb)
+```
 
-```typescript
-const result = await sdk.statistics.getStats(params)
+```go Go
+chargebacks, err := client.ListAccessEarningsChargebacks(ctx, &ofauth.RequestOptions{
+    Query: url.Values{
+        "startDate": []string{"2024-01-01"},
+        "endDate":   []string{"2024-01-31"},
+        "limit":     []string{"20"},
+    },
+})
+```
 
-if (result.error) {
-  // ✅ Error types are fully defined
-  switch (result.error.type) {
-    case "unauthorized":
-      console.log("Session expired")
-      break
-    case "bad_request":
-      // ✅ TypeScript knows error.details exists for bad_request
-      console.log("Invalid parameters:", result.error.details)
-      break
-    case "too_many_requests":
-      console.log("Rate limited - retry available:", result.error.retry)
-      break
-  }
+```csharp C#
+var chargebacks = await client.GetAsync<EarningsChargebacksResponse>(
+    "/v2/access/earnings/chargebacks",
+    query: new Dictionary<string, string?>
+    {
+        ["startDate"] = "2024-01-01",
+        ["endDate"] = "2024-01-31",
+        ["limit"] = "20"
+    }
+);
+```
+</CodeGroup>
+
+---
+
+## Analytics
+
+Content performance analytics are available across multiple categories. Each category offers a **chart** endpoint (time-series data) and a **top** endpoint (ranked content).
+
+<Info>
+  All analytics endpoints require the `analytics:read` permission.
+</Info>
+
+### Posts Analytics
+
+<CodeGroup>
+```typescript TypeScript
+// Posts chart — time-series performance data
+const postsChart = await client.access.analytics.posts.getChart({
+  startDate: '2024-01-01',
+  endDate: '2024-01-31',
+  by: 'views',       // 'purchases' | 'posts' | 'tips' | 'views' | 'likes' | 'comments'
+  withTotal: true,
+});
+
+// Top performing posts
+const topPosts = await client.access.analytics.posts.getTop({
+  by: 'purchases',   // 'purchases' | 'tips' | 'views' | 'likes' | 'comments'
+  startDate: '2024-01-01',
+  endDate: '2024-01-31',
+  limit: 10,
+});
+
+// Stats for a specific post
+const postStats = await client.access.analytics.posts.get({
+  postId: '123456',
+});
+```
+
+```python Python
+from onlyfans_sdk import analytics
+
+# Posts chart
+posts_chart = analytics.list_posts_charts(
+    client,
+    start_date="2024-01-01",
+    end_date="2024-01-31",
+    by="views",
+    with_total=True,
+)
+
+# Top performing posts
+top_posts = analytics.list_posts_tops(
+    client,
+    by="purchases",
+    start_date="2024-01-01",
+    end_date="2024-01-31",
+    limit=10,
+)
+
+# Stats for a specific post
+post_stats = analytics.get_posts(client, post_id="123456")
+```
+
+```go Go
+// Posts chart
+postsChart, err := client.GetAccessAnalyticsPostsChart(ctx, &ofauth.RequestOptions{
+    Query: url.Values{
+        "startDate": []string{"2024-01-01"},
+        "endDate":   []string{"2024-01-31"},
+        "by":        []string{"views"},
+        "withTotal": []string{"true"},
+    },
+})
+
+// Top performing posts
+topPosts, err := client.GetAccessAnalyticsPostsTop(ctx, &ofauth.RequestOptions{
+    Query: url.Values{
+        "by":        []string{"purchases"},
+        "startDate": []string{"2024-01-01"},
+        "endDate":   []string{"2024-01-31"},
+        "limit":     []string{"10"},
+    },
+})
+
+// Stats for a specific post
+postStats, err := client.GetAccessAnalyticsPosts(ctx, "123456")
+```
+
+```csharp C#
+// Posts chart
+var postsChart = await client.GetAsync<AnalyticsPostsChartResponse>(
+    "/v2/access/analytics/posts/chart",
+    query: new Dictionary<string, string?>
+    {
+        ["startDate"] = "2024-01-01",
+        ["endDate"] = "2024-01-31",
+        ["by"] = "views",
+        ["withTotal"] = "true"
+    }
+);
+
+// Top performing posts
+var topPosts = await client.GetAsync<AnalyticsPostsTopResponse>(
+    "/v2/access/analytics/posts/top",
+    query: new Dictionary<string, string?>
+    {
+        ["by"] = "purchases",
+        ["startDate"] = "2024-01-01",
+        ["endDate"] = "2024-01-31",
+        ["limit"] = "10"
+    }
+);
+```
+</CodeGroup>
+
+### Stories Analytics
+
+<CodeGroup>
+```typescript TypeScript
+const storiesChart = await client.access.analytics.stories.getChart({
+  startDate: '2024-01-01',
+  endDate: '2024-01-31',
+  by: 'views',       // 'tips' | 'stories' | 'views' | 'likes' | 'comments'
+});
+
+const topStories = await client.access.analytics.stories.getTop({
+  by: 'views',       // 'tips' | 'views' | 'likes' | 'comments'
+  startDate: '2024-01-01',
+  endDate: '2024-01-31',
+  limit: 10,
+});
+```
+
+```python Python
+stories_chart = analytics.list_stories_charts(
+    client,
+    start_date="2024-01-01",
+    end_date="2024-01-31",
+    by="views",
+)
+
+top_stories = analytics.list_stories_tops(
+    client,
+    by="views",
+    start_date="2024-01-01",
+    end_date="2024-01-31",
+    limit=10,
+)
+```
+
+```go Go
+storiesChart, err := client.GetAccessAnalyticsStoriesChart(ctx, &ofauth.RequestOptions{
+    Query: url.Values{
+        "startDate": []string{"2024-01-01"},
+        "endDate":   []string{"2024-01-31"},
+        "by":        []string{"views"},
+    },
+})
+
+topStories, err := client.GetAccessAnalyticsStoriesTop(ctx, &ofauth.RequestOptions{
+    Query: url.Values{
+        "by":        []string{"views"},
+        "startDate": []string{"2024-01-01"},
+        "endDate":   []string{"2024-01-31"},
+        "limit":     []string{"10"},
+    },
+})
+```
+
+```csharp C#
+var storiesChart = await client.GetAsync<AnalyticsStoriesChartResponse>(
+    "/v2/access/analytics/stories/chart",
+    query: new Dictionary<string, string?>
+    {
+        ["startDate"] = "2024-01-01",
+        ["endDate"] = "2024-01-31",
+        ["by"] = "views"
+    }
+);
+```
+</CodeGroup>
+
+### Streams Analytics
+
+<CodeGroup>
+```typescript TypeScript
+const streamsChart = await client.access.analytics.streams.getChart({
+  startDate: '2024-01-01',
+  endDate: '2024-01-31',
+  by: 'views',       // 'purchases' | 'duration' | 'tips' | 'views' | 'likes' | 'comments'
+});
+
+const topStreams = await client.access.analytics.streams.getTop({
+  by: 'views',
+  startDate: '2024-01-01',
+  endDate: '2024-01-31',
+  limit: 10,
+});
+```
+
+```python Python
+streams_chart = analytics.list_streams_charts(
+    client,
+    start_date="2024-01-01",
+    end_date="2024-01-31",
+    by="views",
+)
+
+top_streams = analytics.list_streams_tops(
+    client,
+    by="views",
+    start_date="2024-01-01",
+    end_date="2024-01-31",
+    limit=10,
+)
+```
+
+```go Go
+streamsChart, err := client.GetAccessAnalyticsStreamsChart(ctx, &ofauth.RequestOptions{
+    Query: url.Values{
+        "startDate": []string{"2024-01-01"},
+        "endDate":   []string{"2024-01-31"},
+        "by":        []string{"views"},
+    },
+})
+```
+
+```csharp C#
+var streamsChart = await client.GetAsync<AnalyticsStreamsChartResponse>(
+    "/v2/access/analytics/streams/chart",
+    query: new Dictionary<string, string?>
+    {
+        ["startDate"] = "2024-01-01",
+        ["endDate"] = "2024-01-31",
+        ["by"] = "views"
+    }
+);
+```
+</CodeGroup>
+
+### Mass Messages Analytics
+
+<CodeGroup>
+```typescript TypeScript
+// Mass messages chart
+const mmChart = await client.access.analytics.massMessages.getChart({
+  startDate: '2024-01-01',
+  endDate: '2024-01-31',
+  withTotal: true,
+});
+
+// List purchased mass messages
+const purchased = await client.access.analytics.massMessages.getPurchased({
+  limit: 20,
+  offset: 0,
+});
+
+// List buyers for a specific mass message
+const buyers = await client.access.analytics.massMessages.listBuyers({
+  massMessageId: '456',
+  limit: 20,
+});
+
+// Auto-paginate through all buyers
+for await (const buyer of client.access.analytics.massMessages.iterateBuyers({
+  massMessageId: '456',
+})) {
+  console.log(buyer);
 }
 ```
 
-## Best Practices
+```python Python
+# Mass messages chart
+mm_chart = analytics.list_mass_messages_charts(
+    client,
+    start_date="2024-01-01",
+    end_date="2024-01-31",
+    with_total=True,
+)
 
-<CardGroup cols={2}>
-  <Card title="Type Safety First" icon="code">
-    **Leverage TypeScript**
-    
-    - Use IDE autocomplete for all parameters
-    - Let TypeScript catch invalid combinations
-    - Trust the type definitions for response structure
-    - Enable strict mode for maximum safety
-  </Card>
-  <Card title="Parameter Validation" icon="check-square">
-    **Trust the SDK**
-    
-    - No manual date format validation needed
-    - Enum values are automatically checked
-    - Required parameters enforced at compile time
-    - Context-aware parameter validation
-  </Card>
-</CardGroup>
+# List purchased mass messages
+purchased = analytics.list_mass_messages_purchaseds(client, limit=20)
+
+# List buyers for a specific mass message
+buyers = analytics.list_mass_messages_buyers(client, mass_message_id="456", limit=20)
+
+# Auto-paginate through all buyers
+for buyer in analytics.iter_mass_messages_buyers(client, mass_message_id="456"):
+    print(buyer)
+```
+
+```go Go
+mmChart, err := client.GetAccessAnalyticsMassMessagesChart(ctx, &ofauth.RequestOptions{
+    Query: url.Values{
+        "startDate": []string{"2024-01-01"},
+        "endDate":   []string{"2024-01-31"},
+        "withTotal": []string{"true"},
+    },
+})
+
+purchased, err := client.GetAccessAnalyticsMassMessagesPurchased(ctx, &ofauth.RequestOptions{
+    Query: url.Values{"limit": []string{"20"}},
+})
+
+buyers, err := client.ListAccessAnalyticsMassMessagesBuyers(ctx, "456", &ofauth.RequestOptions{
+    Query: url.Values{"limit": []string{"20"}},
+})
+```
+
+```csharp C#
+var mmChart = await client.GetAsync<AnalyticsMassMessagesChartResponse>(
+    "/v2/access/analytics/mass-messages/chart",
+    query: new Dictionary<string, string?>
+    {
+        ["startDate"] = "2024-01-01",
+        ["endDate"] = "2024-01-31",
+        ["withTotal"] = "true"
+    }
+);
+
+var purchased = await client.GetAsync<AnalyticsMassMessagesPurchasedResponse>(
+    "/v2/access/analytics/mass-messages/purchased",
+    query: new Dictionary<string, string?> { ["limit"] = "20" }
+);
+```
+</CodeGroup>
+
+### Promotions Analytics
+
+<CodeGroup>
+```typescript TypeScript
+const promoChart = await client.access.analytics.promotions.getChart({
+  startDate: '2024-01-01',
+  endDate: '2024-01-31',
+});
+
+const topPromos = await client.access.analytics.promotions.getTop({
+  startDate: '2024-01-01',
+  endDate: '2024-01-31',
+  limit: 10,
+});
+```
+
+```python Python
+promo_chart = analytics.list_promotions_charts(
+    client,
+    start_date="2024-01-01",
+    end_date="2024-01-31",
+)
+
+top_promos = analytics.list_promotions_tops(
+    client,
+    start_date="2024-01-01",
+    end_date="2024-01-31",
+    limit=10,
+)
+```
+
+```go Go
+promoChart, err := client.GetAccessAnalyticsPromotionsChart(ctx, &ofauth.RequestOptions{
+    Query: url.Values{
+        "startDate": []string{"2024-01-01"},
+        "endDate":   []string{"2024-01-31"},
+    },
+})
+```
+
+```csharp C#
+var promoChart = await client.GetAsync<AnalyticsPromotionsChartResponse>(
+    "/v2/access/analytics/promotions/chart",
+    query: new Dictionary<string, string?>
+    {
+        ["startDate"] = "2024-01-01",
+        ["endDate"] = "2024-01-31"
+    }
+);
+```
+</CodeGroup>
+
+### Additional Analytics
+
+The SDK also provides analytics for **trials**, **campaigns**, and **visitor countries**:
+
+<CodeGroup>
+```typescript TypeScript
+// Trials analytics
+const trialsChart = await client.access.analytics.trials.getChart({
+  startDate: '2024-01-01',
+  endDate: '2024-01-31',
+});
+const topTrials = await client.access.analytics.trials.getTop({
+  startDate: '2024-01-01',
+  endDate: '2024-01-31',
+  limit: 10,
+});
+
+// Campaigns analytics
+const campaignsChart = await client.access.analytics.campaigns.getChart({
+  startDate: '2024-01-01',
+  endDate: '2024-01-31',
+});
+const topCampaigns = await client.access.analytics.campaigns.getTop({
+  startDate: '2024-01-01',
+  endDate: '2024-01-31',
+  limit: 10,
+});
+
+// Visitor countries analytics
+const countriesChart = await client.access.analytics.visitorCountries.getChart({
+  startDate: '2024-01-01',
+  endDate: '2024-01-31',
+  by: 'total',       // 'guests' | 'total' | 'users'
+});
+const topCountries = await client.access.analytics.visitorCountries.getTop({
+  startDate: '2024-01-01',
+  endDate: '2024-01-31',
+  by: 'total',
+});
+```
+
+```python Python
+# Trials analytics
+trials_chart = analytics.list_trials_charts(client, start_date="2024-01-01", end_date="2024-01-31")
+top_trials = analytics.list_trials_tops(client, start_date="2024-01-01", end_date="2024-01-31", limit=10)
+
+# Campaigns analytics
+campaigns_chart = analytics.list_campaigns_charts(client, start_date="2024-01-01", end_date="2024-01-31")
+top_campaigns = analytics.list_campaigns_tops(client, start_date="2024-01-01", end_date="2024-01-31", limit=10)
+
+# Visitor countries analytics
+countries_chart = analytics.list_visitor_countries_charts(client, start_date="2024-01-01", end_date="2024-01-31", by="total")
+top_countries = analytics.list_visitor_countries_tops(client, start_date="2024-01-01", end_date="2024-01-31", by="total")
+```
+
+```go Go
+// Trials
+trialsChart, err := client.GetAccessAnalyticsTrialsChart(ctx, &ofauth.RequestOptions{
+    Query: url.Values{
+        "startDate": []string{"2024-01-01"},
+        "endDate":   []string{"2024-01-31"},
+    },
+})
+
+// Campaigns
+campaignsChart, err := client.GetAccessAnalyticsCampaignsChart(ctx, &ofauth.RequestOptions{
+    Query: url.Values{
+        "startDate": []string{"2024-01-01"},
+        "endDate":   []string{"2024-01-31"},
+    },
+})
+
+// Visitor countries
+countriesChart, err := client.GetAccessAnalyticsVisitorCountriesChart(ctx, &ofauth.RequestOptions{
+    Query: url.Values{
+        "startDate": []string{"2024-01-01"},
+        "endDate":   []string{"2024-01-31"},
+        "by":        []string{"total"},
+    },
+})
+```
+
+```csharp C#
+// Trials
+var trialsChart = await client.GetAsync<AnalyticsTrialsChartResponse>(
+    "/v2/access/analytics/trials/chart",
+    query: new Dictionary<string, string?>
+    {
+        ["startDate"] = "2024-01-01",
+        ["endDate"] = "2024-01-31"
+    }
+);
+
+// Campaigns
+var campaignsChart = await client.GetAsync<AnalyticsCampaignsChartResponse>(
+    "/v2/access/analytics/campaigns/chart",
+    query: new Dictionary<string, string?>
+    {
+        ["startDate"] = "2024-01-01",
+        ["endDate"] = "2024-01-31"
+    }
+);
+
+// Visitor countries
+var countriesChart = await client.GetAsync<AnalyticsVisitorCountriesChartResponse>(
+    "/v2/access/analytics/visitor-countries/chart",
+    query: new Dictionary<string, string?>
+    {
+        ["startDate"] = "2024-01-01",
+        ["endDate"] = "2024-01-31",
+        ["by"] = "total"
+    }
+);
+```
+</CodeGroup>
+
+### Analytics Namespace Reference
+
+| Category | TypeScript | Python | Go | C# Path |
+|---|---|---|---|---|
+| Posts chart | `client.access.analytics.posts.getChart()` | `analytics.list_posts_charts()` | `client.GetAccessAnalyticsPostsChart()` | `/v2/access/analytics/posts/chart` |
+| Posts top | `client.access.analytics.posts.getTop()` | `analytics.list_posts_tops()` | `client.GetAccessAnalyticsPostsTop()` | `/v2/access/analytics/posts/top` |
+| Post stats | `client.access.analytics.posts.get()` | `analytics.get_posts()` | `client.GetAccessAnalyticsPosts()` | `/v2/access/analytics/posts/{id}` |
+| Stories chart | `client.access.analytics.stories.getChart()` | `analytics.list_stories_charts()` | `client.GetAccessAnalyticsStoriesChart()` | `/v2/access/analytics/stories/chart` |
+| Streams chart | `client.access.analytics.streams.getChart()` | `analytics.list_streams_charts()` | `client.GetAccessAnalyticsStreamsChart()` | `/v2/access/analytics/streams/chart` |
+| Mass messages | `client.access.analytics.massMessages.getChart()` | `analytics.list_mass_messages_charts()` | `client.GetAccessAnalyticsMassMessagesChart()` | `/v2/access/analytics/mass-messages/chart` |
+| Promotions | `client.access.analytics.promotions.getChart()` | `analytics.list_promotions_charts()` | `client.GetAccessAnalyticsPromotionsChart()` | `/v2/access/analytics/promotions/chart` |
 
 <Warning>
-  **Performance**: When requesting large date ranges, use pagination parameters to avoid timeouts. The SDK validates these automatically.
-</Warning> 
+  When querying large date ranges, use reasonable `limit` values and pagination to avoid timeouts. The `startDate` and `endDate` parameters accept `YYYY-MM-DD` format strings.
+</Warning>
